--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp1.html
@@ -76,7 +76,7 @@ getline(cin, str);
   <p>
         <a href="#p1">Что необходимо для курса</a>
     <br><a href="#p2">Что необходимо для написания кода</a>
-    <br><a href="#p3">Настройка Visual Studio</a>
+    <br><a href="#p3">Основы C++ 1. Вводное занятие</a>
   </p>
   <p>
         <a href="#task1">Задача A. Арбуз</a>
@@ -134,24 +134,114 @@ getline(cin, str);
 </article>
 
 
-<!-- Настройка Visual Studio -->
+<!-- Основы C++ 1. Вводное занятие -->
 <article class="article">
   <div class="anchor" id="p3"></div>
-  <h3>Настройка Visual Studio</h3>
+  <h3>Основы C++ 1. Вводное занятие</h3>
 
-  <h4>2 пробела вместо табуляции</h4>
-  <code>Средства - Параметры - Текстовый редактор - Все языки - Табуляция</code>
-  <p>Выбрать Размер интервала табуляции 2, Размер отступа 2, Вставлять пробелы.</p>
-  <code>Tools - Options - Text Editor - All Languages - Tabs</code>
-  <p>Выбрать Tab size 2, Indent size 2, Insert spaces</p>
+  <p>Программа на языке C++ состоит из шести частей.</p>
+  <ol>
+    <li>Библиотеки</li>
+    <li>Пространство имен</li>
+    <li>Глобальные переменные</li>
+    <li>Структуры и классы</li>
+    <li>Функции. Задачи разбиваются на маленькие подзадачи.</li>
+    <li>Функция main</li>
+  </ol>
 
-  <h4>Запретить перенос else</h4>
-  <code>Средства - Параметры - Текстовый редактор - C/C++ - Стиль кода - Форматирование - Новые строки</code>
-  <p>Убрать галочку с пункта</p>
-  <code>Помещать ключевое слово else на новую строку</code>
-  <code>Tools - Options - Text Editor - C/C++ - Code Style - Formatting - New Lines</code>
-  <p>Убрать галочку с пункта</p>
-  <code>Place else on a new line</code>
+  <h4>Тип данных int</h4>
+  <p>Занимает 4 байта. Хранит числа от -2<sup>31</sup> до 2<sup>31</sup> - 1 (от -10<sup>9</sup> до 10<sup>9</sup>)</p>
+
+  <h4>Тип данных long long</h4>
+  <p>Занимает 8 байт. Хранит числа от -2<sup>63</sup> до 2<sup>63</sup> - 1 (от -8*10<sup>18</sup> до 8*10<sup>18</sup>)</p>
+
+  <h4>Тип unsigned int</h4>
+  <p>Занимает 4 байта. Хранит числа от 0 до 2<sup>32</sup> - 1.</p>
+
+  <h4>Тип данных double</h4>
+  <p>Занимает 8 байт. Хранит 16 соседних знаков. Вещественное число представляется числом с точкой. Есть цифры до точки и после точки. Количество цифр слева от точки плюс количество цифр справа от точки не может быть больше 16.</p>
+
+  <h4>Тип данных long double</h4>
+  <p>Занимает 10 байт. Хранит 20 соседних знаков.</p>
+
+  <h4>Тип данных bool</h4>
+  <p>Занимает 1 байт. Хранит только два значения либо true, либо false.</p>
+
+  <h4>Тип данных char</h4>
+  <p>Занимает 1 байт. Хранит число от 0 до 255. Это число соответствует символу из таблицы символов ASCII.</p>
+
+  <h4>Переменные</h4>
+  <p>Чтобы сохранить в памяти какую-нибудь информацию, нужно создать переменную. Сначала пишется тип переменной, который мы выбираем из стандартных типов, или создаем свой собственный тип. Потом пишется ее имя, которое мы придумываем сами.</p>
+  <code>int a;</code>
+  <p>При создании переменной в ней хранится минимальное значение из диапазона. Если значение переменной известно заранее, то при создании переменную можно сразу инициализировать.</p>
+  <code>int b =10;</code>
+
+  <h4>Ограничения</h4>
+  <p>Все задачи по спортивному программированию имеют два ограничения: по времени и по памяти. Ограничение по времени нужно для того чтобы программа не работала бесконечно, а выдавала ответ, например, за две секунды. Ограничение по памяти нужно для того чтобы программа не заняла всю свободную память для своих нужд, а занимала , например, не более 256 мегабайт.</p>
+
+  <h4>Ввод и вывод информации</h4>
+  <p>Ввод информации используется для получения исходных данных для задачи. Вывод информации используется для выдачи результата работы программы. Для потокового ввода и вывода необходимо подключить библиотеку iostream</p>
+  <code>include &lt;iostream&gt;</code>
+  <p>Для сокращения названия функций для ввода и вывода информации, необходимо подключить пространство имен</p>
+  <code>using namespace std;</code>
+  <p>Теперь вместо std::cin можно писать cin, вместо std::cout можно писать cout.</p>
+  <p>Для ввода данных в одну переменную надо написать</p>
+  <code>cin >> a;</code>
+  <p>Такая операция ввода вернет объект cin, который можно использовать еще раз. И так далее по цепочке. Поэтому для ввода данных в несколько переменных можно написать</p>
+  <code>cin >> a >> b >> c;</code>
+  <p>Для вывода числа 5 надо написать</p>
+  <code>cout &lt;&lt; 5;</code>
+  <p>Такая операция ввода вернет объект cout, который можно использовать еще раз. И так далее по цепочке. Поэтому для вывода нескольких данных можно написать</p>
+  <code>cout &lt;&lt; 5 &lt;&lt; ' ' &lt;&lt; 3 &lt;&lt; ' ' &lt;&lt; 9;</code>
+  <p>Между данными необходимо использовать символ разделитель, например пробел.</p>
+
+  <h4>Асимптотика</h4>
+  <p>В зависимости от входных параметров, праграмма выполнит определенное количество действий. Асимптотика это оценка количества действий программы (оценка сложности, трудоемкости). В спортивном программировании всегда подсчитывают наихудшую асимптотику. Потому что на тестовых данных всегда будет тест на очень больших входных данных, который проверяет наихудшую асимптотику программы.</p>
+  <p>Обычно за 1 секунду компьютер выполняет около 4*10⁹ простейших операций. Эта константа связана с железом на котором работает сервер. Бывают серверы по-мощнее, бывают по-слабее. Это средняя оценка.</p>
+
+  <h4>Линейная сложность O(n)</h4>
+  <p>Если входные данные n ≤ 10⁵. И мы выполняем один цикл по всем входным данным, то будет выполнено c * n  = c * 10⁵ операций, где c это некоторая константа.</p>
+  <p>Поскольку 4*10⁹ > 10⁵, то алгоритм с линейной сложностью <strong>решит</strong> задачу за 1 секунду.</p>
+
+  <h4>Квадратичная сложность O(n²)</h4>
+  <p>Если входные данные n ≤ 10⁵. И мы выполняем два вложенных цикла по всем входным данным, то будет выполнено c * n²  = c * 10¹⁰ операций, где c это некоторая константа.</p>
+  <p>Поскольку 10¹⁰ > 4*10⁹, то алгоритм с квадратичной сложностью <strong>не решит</strong> задачу за 1 секунду.</p>
+
+  <h4>Массивы</h4>
+  <p>Массив это набор подряд идущих ячеек памяти с одним типом данных. Массив может быть статический или динамический.</p>
+  <p>Создадим динамический массив через указатель</p>
+  <code>int *A;</code>
+  <p>Создав указатель, мы можем выделить нужное количество элементов начиная с этого места. Выделим память необходимую для хранения n элементов типа int</p>
+  <code>A = new int[n];</code>
+  <p>Чтобы обратиться к элементу под номером i в массиве, нужно написать имя массива и в квадратных скобках номер элемента</p>
+  <code>A[i] = 15;</code>
+  <p>В динамическом массиве число элементов неизвестно на этапе компиляции, а определяется во время выполнения программы. Поэтому и память под массив выделяется во время выполнения программы.</p>
+  <p>Создадим статический массив на 100 элементов типа int</p>
+  <code>int B[100];</code>
+  <p>Размер статического массива указан в тексте программы и известен до ее компиляции. Поэтому память под массив выделяется во время компиляции программы и во время выполнения размер массива не изменяется.</p>
+
+  <h4>Многомерный массив</h4>
+  <p>Создадим статический двумерный массив на 100 элементов, каждый из которых содержит еще 100 элементов.</p>
+  <code>int A[100][100];</code>
+  <p>Для обращения к элементу двумерного массива нужно после имени массива указать два индекса</p>
+  <code>A[i][j] = 15;</code>
+  <p>Массивы больше чем двумерные не используют в спортивном программировании, потому что они занимают слишком много памяти.</p>
+  <p>Создание и инициализация массива, например, нулями потребляет время и память. Поэтому ограничение на максимальный размер массива накладывается способностью создать массив, например за 1 секунду. За одну секунду можно создать массив из 10⁶ элементов. Если это массив целых чисел, которые занимают по 4 байта, то такой массив займет 4 мегабайта памяти.</p>
+
+  <h4>Преобразования типов данных</h4>
+  <p>Разделяют два способа преобразования типов данных : явный и неявный. Если мы выполняем математическую операцию с переменными разных типов данных, то они сначала приводятся к одному типу данных, затем с ними выполняется математическая операция. Компьютер может выполнять математические операции только с переменными одинакового типа.</p>
+
+  <h4>Неявное преобразование</h4>
+  <p>При делении двух целых чисел происходит целочисленное деление, которое возвращает целое число</p>
+  <code>int a = 33 / 5; // a = 6</code>
+  <p>Если одно из цедых чисел умножить на вещественное, то произойдет неявное преобразование целого числа к вещественному. Дальше при делении произойдет неявное преобразование второго целого числа к вещественному. При делении двух вещественных чисел происходит обычное деление, которое возвращает вещественное число</p>
+  <code>double a = (1.0 * 33) / 5; // a = 6.6</code>
+  <p>При неявном преобразовании мы не прописываем тип данных, в который нужно преобразовать.</p>
+
+  <h4>Явное преобразование</h4>
+  <p>Мы сами преобразовываем одно из целых чисел в вещественное явным способом через оператор double</p>
+  <code>double a = double(33) / 5; // a = 6.6</code>
+  <p>При явном преобразовании мы прописываем тип данных, в который нужно преобразовать.</p>
 </article>
 
 
@@ -171,9 +261,11 @@ getline(cin, str);
   <h4>Выходные данные</h4>
   <p>Выведите YES, если ребята смогут поделить арбуз на две части, каждая из которых весит четное число килограммм, и NO в противном случае</p>
 
-  <h4>Пример</h4>
-  <code>8</code>
-  <code>YES</code>
+  <details>
+    <summary>Пример</summary>
+    <code>8</code>
+    <code>YES</code>
+  </details>
 
 
   <details>
@@ -255,13 +347,16 @@ rl.on('line', (input) => {
   <h4>Выходные данные</h4>
   <p>Выведите минимальное количество шагов, которые необходимо сделать слонику, чтобы попасть из точки 0 в точку x</p>
 
-  <h4>Пример 1</h4>
-  <code>5</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>12</code>
-  <code>3</code>
+    <h4>Пример 2</h4>
+    <code>12</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение на C++</summary>
@@ -328,20 +423,23 @@ rl.on('line', (input) => {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — через сколько целых лет Лимак станет строго больше Боба.</p>
 
-  <h4>Пример 1</h4>
-  <code>4 7</code>
-  <code>2</code>
-  <p>В первом примере изначально вес Лимака равен 4, а вес Боба — 7. Через год их веса равны 4·3=12 и 7·2=14 соответственно (один вес утроился, а второй удвоился). Лимак все еще не больше Боба. Через два года их веса равны 36 и 28, то есть вес Лимака больше, чем вес Боба. Лимак стал больше Боба через два года, поэтому вы должны вывести 2.</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>4 7</code>
+    <code>2</code>
+    <p>В первом примере изначально вес Лимака равен 4, а вес Боба — 7. Через год их веса равны 4·3=12 и 7·2=14 соответственно (один вес утроился, а второй удвоился). Лимак все еще не больше Боба. Через два года их веса равны 36 и 28, то есть вес Лимака больше, чем вес Боба. Лимак стал больше Боба через два года, поэтому вы должны вывести 2.</p>
 
-  <h4>Пример 2</h4>
-  <code>4 9</code>
-  <code>3</code>
-  <p>Во втором примере веса Лимака и Боба в последующие года равны: 12 и 18, затем 36 и 36, и наконец 108 и 72 (через три года). Ответ равен 3. Помните, что Лимак хочет стать строго больше Боба, и его не устроят равные веса.</p>
+    <h4>Пример 2</h4>
+    <code>4 9</code>
+    <code>3</code>
+    <p>Во втором примере веса Лимака и Боба в последующие года равны: 12 и 18, затем 36 и 36, и наконец 108 и 72 (через три года). Ответ равен 3. Помните, что Лимак хочет стать строго больше Боба, и его не устроят равные веса.</p>
 
-  <h4>Пример 3</h4>
-  <code>1 1</code>
-  <code>1</code>
-  <p>В третьем примере Лимак станет больше Боба через один год, их веса будут равны 3 и 2 соответственно. Цикл продолжается, пока вес Лимака не станет строго больше веса Боба.</p>
+    <h4>Пример 3</h4>
+    <code>1 1</code>
+    <code>1</code>
+    <p>В третьем примере Лимак станет больше Боба через один год, их веса будут равны 3 и 2 соответственно. Цикл продолжается, пока вес Лимака не станет строго больше веса Боба.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -394,7 +492,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите t целых чисел — искомые суммы a + b для каждого набора входных данных.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1 5
@@ -408,6 +507,7 @@ int main() {
 0
 1110
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -456,7 +556,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите «YES», если одно из чисел равно сумме двух других, и «NO» в противном случае. Вы можете вывести ответ в любом регистре (например, строки «YEs», «Yes», «Yes» и «YES» будут считаться как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1 4 3
@@ -476,7 +577,8 @@ NO
 NO
 YES
 </pre>
-  <p>Примечание. В первом наборе 1+3=4. Во втором наборе ни одно из чисел не является суммой двух других. В третьем наборе 9+11=20.</p>
+    <p>Примечание. В первом наборе 1+3=4. Во втором наборе ни одно из чисел не является суммой двух других. В третьем наборе 9+11=20.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -530,17 +632,20 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите исправленное слово s. Если в заданном слове s строго больше заглавных букв, приведите его к верхнему регистру, иначе — к нижнему.</p>
 
-  <h4>Пример 1</h4>
-  <code>HoUse</code>
-  <code>house</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>HoUse</code>
+    <code>house</code>
 
-  <h4>Пример 2</h4>
-  <code>ViP</code>
-  <code>VIP</code>
+    <h4>Пример 2</h4>
+    <code>ViP</code>
+    <code>VIP</code>
 
-  <h4>Пример 3</h4>
-  <code>maTRIx</code>
-  <code>matrix</code>
+    <h4>Пример 3</h4>
+    <code>maTRIx</code>
+    <code>matrix</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -616,26 +721,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Если первая строка меньше второй, выведите «-1». Если вторая строка меньше первой, выведите «1». Если строки равны, выведите «0». Учтите, что регистр букв не учитывается при сравнении.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 aaaa
 aaaA
 </pre>
-  <code>0</code>
+    <code>0</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 abs
 Abz
 </pre>
-  <code>-1</code>
+    <code>-1</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 abcdefg
 AbCdEfF
 </pre>
-  <code>1</code>
+    <code>1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -699,17 +807,19 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите количество матчей, в которых домашняя команда выступит в выездной форме.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 2
 2 4
 3 4
 </pre>
-  <code>1</code>
-  <p>В первом тестовом примере чемпионат состоит из 6 матчей. Единственный поединок, в котором произойдет интересное нам событие — матч между командами 2 и 1 на стадионе команды 2.</p>
+    <code>1</code>
+    <p>В первом тестовом примере чемпионат состоит из 6 матчей. Единственный поединок, в котором произойдет интересное нам событие — матч между командами 2 и 1 на стадионе команды 2.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 100 42
@@ -717,8 +827,8 @@ int main() {
 5 42
 100 5
 </pre>
-  <code>5</code>
-  <p>Во втором тестовом примере домашней команде придется сменить форму в матчах между командами: 1 и 2, 2 и 1, 2 и 3, 3 и 4, 4 и 2 (первой написана принимающая команда).</p>
+    <code>5</code>
+    <p>Во втором тестовом примере домашней команде придется сменить форму в матчах между командами: 1 и 2, 2 и 1, 2 и 3, 3 и 4, 4 и 2 (первой написана принимающая команда).</p>
 
   <h4>Пример 3</h4>
 <pre>
@@ -726,7 +836,8 @@ int main() {
 1 2
 1 2
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
