--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
@@ -43,26 +43,31 @@
   <div class="anchor" id="p1"></div>
   <h3>Бинарный поиск на массиве</h3>
 
-  <h4>Линейный поиск на массиве</h4>
-
   <h4>Задача. Поиск числа в массиве</h4>
-  <p>Дан массив целых чисел A длины n a<sub>1</sub>, a<sub>2</sub>, ... , a<sub>n</sub>. Задано q запросов, каждый запрос это проверка существует ли число b<sub>j</sub> в массиве A.</p>
-  <p>Наивное решение задачи, каждый запрос обрабатывать линейным поиском. Трудоемкость такого решение O(n * q)</p>
+  <p>Дан массив целых чисел A длины n a<sub>1</sub>, a<sub>2</sub>, ... , a<sub>n</sub>. Задано q запросов, каждый запрос это проверка существует ли число b в массиве A.</p>
+
+  <h4>Линейный поиск на массиве</h4>
+  <p>Наивное решение задачи это посмотреть на каждый элемент, чтобы проверить равен ли он b. Каждый запрос обрабатывать линейным поиском.</p>
+  <p><strong>Трудоемкость линейного поиска</strong> при n элементов и q запросах O(n * q).</p>
 
   <details>
     <summary>Решение за O(n * q)</summary>
 <pre>
-int q, b;
+int q; // число запросов
+int b; // число для поиска
 cin >> q;
 bool flag;
+
 for (int j = 0; j &lt; q; j++) {
   flag = false;
   cin >> b;
+
   for (int i = 0; i &lt; A.size(); i++) {
     if (A[i] == b) {
       flag = true;
     }
   }
+
   if (flag) {
     cout &lt;&lt; "YES\n";
   } else {
@@ -73,8 +78,8 @@ for (int j = 0; j &lt; q; j++) {
   </details>
 
   <h4>Бинарный поиск на массиве</h4>
-  <p>Оптимизируем решение. Попробуем искать значение в массиве быстрее чем за O(n). Для улучшения мы требуем, чтобы массив был упорядочен (по возрастанию). Для алгоритма нам потребуется три указателя left, right, mid.</p>
-  <p>left и right это границы поиска, mid это середина области поиска</p>
+  <p>Оптимизируем решение. Попробуем искать значение в массиве быстрее чем за O(n). Для улучшения мы требуем, чтобы массив был упорядочен (по возрастанию). Алгоритм бинарного поиска основан на методе двух указателей. Нам потребуется два указателя left и right и переменная mid для нахождения середины.</p>
+  <p>Ответ будет находиться между двумя указателями left и right это границы поиска.</p>
   <p>Разделим нашу область поиска на две равные части, для этого mid определим по формуле</p>
   <code>mid = (left + right) / 2</code>
   <p>Элемент, который мы ищем лежит в одной из частей. Элемент массива с индексом mid может принадлежать любой из частей.</p>
@@ -103,10 +108,11 @@ while (right - left > 1) {
   }
 }
 </pre>
+  <p><strong>Трудоемкость бинарного поиска</strong> при n элементов и q запросах O(n*log<sub>2</sub>(n) + q*log<sub>2</sub>(n))</p>
 
-  <h4>Задача. Поиск числа в массиве</h4>
-  <p>Дан массив целых чисел A длины n a<sub>1</sub>, a<sub>2</sub>, ... , a<sub>n</sub>. Задано q запросов, каждый запрос это проверка существует ли число b<sub>j</sub> в массиве A.</p>
-  <p>Трудоемкость алгоритма O(n*log<sub>2</sub>(n) + q*log<sub>2</sub>(n))</p>
+  <p>Бинарный поиск на массиве можно реализовывать по-разному. Чуть ранее мы реализовывали версию бинарного поиска, в которой ответ искали в области включительно с границами [left, right]. Мы можем изменить область поиска элемента до полуинтервалов [left, right) это позволит меньше делать действий в дополнительной проверке элементов после цикла while, но усложняет выбор сдвига границ</p>
+
+  <p><strong>Школьная</strong> версия - это реализация на отрезке, в которой ответ искали в области включительно с границами [left, right]</p>
 
   <details>
     <summary>Код (школьная версия)</summary>
@@ -114,6 +120,7 @@ while (right - left > 1) {
 sort(A.begin(), A.end());
 int q, b, left, right, mid;
 cin >> q;
+
 for (int j = 0; j &lt; q; j++) {
   cin >> b;
   left = 0;
@@ -121,10 +128,10 @@ for (int j = 0; j &lt; q; j++) {
 
   while (right - left > 1) {
     mid = (right + left) / 2;
-    if (A[mid] &lt; b) {
-      left = mid;
-    } else {
+    if (A[mid] > b) {
       right = mid;
+    } else {
+      left = mid;
     }
   }
 
@@ -137,9 +144,7 @@ for (int j = 0; j &lt; q; j++) {
 </pre>
   </details>
 
-  <p>Бинарный поиск на массиве можно реализовывать по-разному. Чуть ранее мы реализовывали версию бинарного поиска, в которой ответ искали в области включительно с границами [left, right]. Мы можем изменить область поиска элемента до полуинтервалов [left, right) это позволит меньше делать действий в дополнительной проверке элементов после цикла while, но усложняет выбор сдвига границ</p>
-  <p>Реализация на отрезке - это <strong>школьная</strong> версия</p>
-  <p>Реализация на полуинтервале - это <strong>студенческая</strong> версия</p>
+  <p><strong>Студенческая</strong> версия - это реализация на полуинтервале [left, right).</p>
 
   <details>
     <summary>Код (студенческая версия)</summary>
@@ -147,6 +152,7 @@ for (int j = 0; j &lt; q; j++) {
 sort(A.begin(), A.end());
 int q, b, left, right, mid;
 cin >> q;
+
 for (int j = 0; j &lt; q; j++) {
   cin >> b;
   left = 0;
@@ -155,9 +161,9 @@ for (int j = 0; j &lt; q; j++) {
   while (right - left > 1) {
     mid = (right + left) / 2;
     if (A[mid] >= b) { // здесь отличие
-      right = mid; // здесь отличие
+      right = mid;
     } else {
-      left = mid; // здесь отличие
+      left = mid;
     }
   }
 
@@ -170,9 +176,46 @@ for (int j = 0; j &lt; q; j++) {
 </pre>
   </details>
 
-  <p>Рассмотрим небольшое усложнение задаи про поиск элементов в массиве.</p>
-  <p>Пусть нас интересует не только существование элемента в массиве, но и определить какое их количество</p>
-  <p>При помощи бинарного поиска мы можем определить первую и последнюю позицию в отсортированном массиве, где встречается элемент</p>
+  <h4>Задача поиска числа</h4>
+
+  <p>Если массив состоит из двух отсортированных частей, то можно два раза применить бинарный поиск. Сначала к одной части, а затем к другой.</p>
+
+  <h4>Задача поиска числа и его количества</h4>
+
+  <p>Рассмотрим небольшое усложнение задачи про поиск элементов в массиве.</p>
+  <p>Пусть нас интересует не только существование элемента в массиве, но и количество.</p>
+  <p>При помощи бинарного поиска мы можем определить первую и последнюю позицию в отсортированном массиве, где встречается элемент.</p>
+
+  <h4>Задача определения количества элементов</h4>
+
+  <p>На отсортированном массиве определить количество элементов, которые</p>
+  <code>p ≤ A[i] ≤ q</code>
+  <p>Эту задачу можно разбить на две подзадачи.</p>
+  <p>Первая. Найдем такой элемент в массиве, что все элементы справа от него будут p ≤ A[i]. Эту задачу решит левосторонний бинарный поиск.</p>
+<pre>
+if (A[i] >= p) {
+  right = mid;
+} else {
+  left = mid;
+}
+</pre>
+  <p>Вторая. Найдем такой элемент в массиве, что все элементы слева от него будут A[i] ≤ q. Эту задачу решит правосторонний бинарный поиск.</p>
+<pre>
+if (A[i] &lt;= p) {
+  left = mid;
+} else {
+  right = mid;
+}
+</pre>
+
+  <h4>Решение задач</h4>
+
+  <p>Задачи на бинарный поиск можно решать разными способами:</p>
+  <ol>
+    <li>Бинарным поиском</li>
+    <li>Структурой данных set и map</li>
+    <li>Функциями lower_bound() и upper_bound(). Они принимают три аргумента. Первый это указатель на нижнюю границу диапазона. Второй это указатель на верхнюю границу диапазона. Третий это значение, которое надо найти. lower_bound возвращает первое значение A[i] >= c. upper_bound возвращает первое значение A[i] > c.</li>
+  </ol>
 </article>
 
 
@@ -298,15 +341,18 @@ int main() {
   cout.tie(0);
 
   // ввод данных
-  int n, q;
+  int n; // число чисел
+  int q; // число запросов
   cin >> n >> q;
+
   vector&lt;int&gt; A(n);
   for (int i = 0; i &lt; n; i++) {
-    cin >> A[i];
+    cin >> A[i]; // числа
   }
+
   vector&lt;int&gt; B(q);
   for (int i = 0; i &lt; q; i++) {
-    cin >> B[i];
+    cin >> B[i]; // запросы
   }
 
   // решение
@@ -314,23 +360,23 @@ int main() {
 
   // обработка запросов
   for (int i = 0; i &lt; q; i++) {
-    int qu = B[i];
+    int num = B[i];
 
     // бинарный поиск
     int left = 0;
-    int right = n;
-    int med = (left + right) / 2;
+    int right = n - 1;
+    int mid;
     while (right - left > 1) {
-      if (qu &lt; A[med]) {
-        right = med;
+      mid = (left + right) / 2;
+      if (A[mid] > num) {
+        right = mid;
       } else {
-        left = med;
+        left = mid;
       }
-      med = (left + right) / 2;
     }
 
     // вывод результата
-    if (A[left] == qu) {
+    if (A[left] == num || A[right] == num) {
       cout &lt;&lt; "YES" &lt;&lt; '\n';
     } else {
       cout &lt;&lt; "NO" &lt;&lt; '\n';
