--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp12.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp12.html
@@ -1000,35 +1000,54 @@ using namespace std;
 
 int main() {
   // ввод данных
-  int n, gamer1, gamer2, tmp;
-  long long k;
-  queue&lt;int&gt; q;
+  int n; // число игроков
+  long long k; // число побед подряд
   cin >> n >> k;
+
+  int gamer1, gamer2; // игроки за столом
+  // введем первых двух игроков
+  // и сразу поставим их за стол
   cin >> gamer1 >> gamer2;
 
-  // решение
+  int tmp;
+  queue&lt;int&gt; q;
+
+  // ставим сильного игрока на первое место
+  // а слабого на второе
   if (gamer2 > gamer1) {
     tmp = gamer2;
     gamer2 = gamer1;
     gamer1 = tmp;
   }
+
+  // заполним очередь игроками
   for (int i = 2; i &lt; n; i++) {
     cin >> tmp;
     q.push(tmp);
   }
-  int count_win = 0;
-  int iter = 0;
+
+  // решение
+  int count_win = 0; // число побед подряд одного игрока
+  int iter = 0; // число проигравших игроков
+
+  // пока все не сыграют или пока кто-то не выиграет k раз подряд
   while (iter &lt; n && count_win &lt; k) {
     if (gamer1 > gamer2) {
+      // ставим слабого игрока в конец очереди
       q.push(gamer2);
-      count_win++;
+      // а на его место ставим следующего игрока из начала очереди
       gamer2 = q.front();
       q.pop();
+      // увеличиваем число побед сильного игрока
+      count_win++;
     } else {
+      // ставим слабого игрока в конец очереди
       q.push(gamer1);
       gamer1 = gamer2;
+      // а на его место ставим следующего игрока из начала очереди
       gamer2 = q.front();
       q.pop();
+      // сильный игрок сменился и число его побед равно 1
       count_win = 1;
     }
     iter++;
@@ -1490,7 +1509,107 @@ Y5
 
   <details>
     <summary>Решение</summary>
-    <p>Только зверем с минимальной длиной можно измерить всех остальных, если это возможно. Заведем queue для добавление и удаления из нее элементов, unordered_map для частотного массива и multiset для быстрого поиска минимума.</p>
+
+    <h4>Тест 11</h4>
+    <code>8 +12 ? +18 ? +9 ? - ?</code>
+    <code>Y12 N N Y9</code>
+
+    <p>Только минимальное из чисел может быть делителем нескольких чисел, если это возможно.</p>
+    <p>Заведем <strong>очередь (queue)</strong> для добавления и удаления из нее элементов.</p>
+    <p>Заведем <strong>множество multiset</strong> для быстрого поиска минимума.</p>
+    <p>При <strong>добавлении</strong> элемента. Сначала проверяем условие, если очередь пустая, то текущий НОД равен добавляемому элементу, если очередь не пустая и такого элемента нет в множестве, то пересчитываем текущий НОД с минимальным элементом и храним его. Потом элемент добавляем в очередь и в множество.</p>
+    <p>При <strong>удалении</strong> элемента если очередь не пустая. Сначала удаляем элемент из очереди и из множества. Потом проверяем условие, если очередь не пустая и такого элемента больше нет в множестве и минимальный элемент не равен текущему НОД, то пересчитываем текущий НОД для всех элементов в множестве.</p>
+    <p>При <strong>проверке</strong> на существующий делитель. Проверяем условие, если очередь не пустая и минимальный элемент в множестве равен текущему НОД, то выводим 'Y', иначе 'N'.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;queue&gt;
+#include &lt;set&gt;
+
+using namespace std;
+
+int gcd(int a, int b) {
+  while (a != 0 && b != 0) {
+    if (a > b) {
+      a = a % b;
+    } else {
+      b = b % a;
+    }
+  }
+  return a + b;
+}
+
+int main() {
+  // условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // ввод данных
+  int n; // число запросов
+  cin >> n;
+
+  // решение
+  queue&lt;int&gt; q; // очередь
+  multiset&lt;int&gt; m; // множество
+  int current_gcd = 0;
+
+  while (n--) {
+    char d; // очередное действие
+    cin >> d;
+
+    if (d == '+') {
+      // следующее число
+      int x;
+      cin >> x;
+
+      if (q.empty()) {
+        // если очередь пустая
+        current_gcd = x;
+      } else if (m.find(x) == m.end()) {
+        // если элемента еще нет в множестве
+        // пересчитываем gcd
+        current_gcd = gcd(current_gcd, x);
+      }
+
+      q.push(x); // добавление в очередь
+      m.insert(x); // добавление в множество
+    }
+
+    if (d == '-' && !q.empty()) {
+      // удаление из непустой очереди
+      int num = q.front();
+      q.pop(); // удаление из очереди
+      m.erase(m.find(num)); // удаление из множества
+
+      // если очередь не пустая после удаления элемента
+      // если такого элемента больше нет в множестве
+      // и текущий НОД не равен минимальному элементу
+      if (!q.empty() && m.find(num) == m.end() && *m.begin() != current_gcd) {
+        // пересчитываем gcd
+        current_gcd = 0;
+        for (const auto& el : m) {
+          current_gcd = gcd(current_gcd, el);
+        }
+      }
+
+      // если очередь пустая после удаления элемента
+      if (q.empty()) {
+        current_gcd = 0;
+      }
+    }
+
+    if (d == '?') {
+      // вывод ответа
+      if (!q.empty() && *m.begin() == current_gcd) {
+        cout &lt;&lt; 'Y' &lt;&lt; current_gcd &lt;&lt; '\n';
+      } else {
+        cout &lt;&lt; "N\n";
+      }
+    }
+  }
+}
+</pre>
   </details>
 </article>
 
