--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp2.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp2.html
@@ -488,13 +488,16 @@ cout &lt;&lt; sum;
   <h4>Выходные данные</h4>
   <p>Выведите одно число — максимальное количество доминошек, которое можно уложить.</p>
 
-  <h4>Пример 1</h4>
-  <code>2 4</code>
-  <code>Output: 4</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 4</code>
+    <code>Output: 4</code>
 
-  <h4>Пример 2</h4>
-  <code>3 3</code>
-  <code>Output: 4</code>
+    <h4>Пример 2</h4>
+    <code>3 3</code>
+    <code>Output: 4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -539,13 +542,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести ответ на задачу.</p>
 
-  <h4>Пример 1</h4>
-  <code>1 2 3</code>
-  <code>5</code>
+  <details>
+    <summary></summary>
+    <h4>Пример 1</h4>
+    <code>1 2 3</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
-  <code>3 2 1</code>
-  <code>7</code>
+    <h4>Пример 2</h4>
+    <code>3 2 1</code>
+    <code>7</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -584,13 +590,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести "Yes", если год является високосным, и "No" иначе</p>
 
-  <h4>Пример 1</h4>
-  <code>1900</code>
-  <code>No</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1900</code>
+    <code>No</code>
 
-  <h4>Пример 2</h4>
-  <code>2000</code>
-  <code>Yes</code>
+    <h4>Пример 2</h4>
+    <code>2000</code>
+    <code>Yes</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -645,9 +654,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите искомое количество плит.</p>
 
-  <h4>Пример</h4>
-  <code>6 6 4</code>
-  <code>4</code>
+  <details>
+    <summary>Пример</summary>
+    <code>6 6 4</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -704,19 +715,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести через пробел возраст старшего и младшего брата</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 4
 3 2 4 1
 </pre>
-  <code>4 1</code>
+    <code>4 1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 8 9 2 10
 </pre>
-  <code>10 1</code>
+    <code>10 1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -776,20 +790,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите искомое минимальное количество лопат, которые нужно купить Поликарпу, чтобы расплатиться без сдачи.</p>
 
-  <h4>Пример 1</h4>
-  <code>117 3</code>
-  <code>9</code>
-  <p>В первом примере Поликарп может купить 9 лопат, заплатив 9·117 = 1053 бурлей. В самом деле, эту сумму он может заплатить используя монеты номиналом 10 бурлей и одну монету номиналом 3 бурля. Купить меньшее количество лопат (и при этом расплатиться без сдачи), он не может.</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>117 3</code>
+    <code>9</code>
+    <p>В первом примере Поликарп может купить 9 лопат, заплатив 9·117 = 1053 бурлей. В самом деле, эту сумму он может заплатить используя монеты номиналом 10 бурлей и одну монету номиналом 3 бурля. Купить меньшее количество лопат (и при этом расплатиться без сдачи), он не может.</p>
 
-  <h4>Пример 2</h4>
-  <code>237 7</code>
-  <code>1</code>
-  <p>Во втором примере Поликарпу достаточно купить одну лопату.</p>
+    <h4>Пример 2</h4>
+    <code>237 7</code>
+    <code>1</code>
+    <p>Во втором примере Поликарпу достаточно купить одну лопату.</p>
 
-  <h4>Пример 3</h4>
-  <code>15 2</code>
-  <code>2</code>
-  <p>В третьем примере Поликарп должен купить 2 лопаты, заплатив 2·15 = 30 бурлей. Эту сумму он, очевидно, может заплатить без сдачи.</p>
+    <h4>Пример 3</h4>
+    <code>15 2</code>
+    <code>2</code>
+    <p>В третьем примере Поликарп должен купить 2 лопаты, заплатив 2·15 = 30 бурлей. Эту сумму он, очевидно, может заплатить без сдачи.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -848,9 +865,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — количество долларов, которое солдату надо одолжить у однополчанина. Если деньги одалживать не надо, выведите 0.</p>
 
-  <h4>Пример</h4>
-  <code>3 17 4</code>
-  <code>13</code>
+  <details>
+    <summary>Пример</summary>
+    <code>3 17 4</code>
+    <code>13</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -910,20 +929,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите «YES», если число n — почти счастливое, и «NO» в противном случае (без кавычек).</p>
 
-  <h4>Пример 1</h4>
-  <code>40047</code>
-  <code>NO</code>
-  <p>В первом примере количество счастливых цифр числа равно 3 (первая и последние две цифры), поэтому ответ «NO».</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>40047</code>
+    <code>NO</code>
+    <p>В первом примере количество счастливых цифр числа равно 3 (первая и последние две цифры), поэтому ответ «NO».</p>
 
-  <h4>Пример 2</h4>
-  <code>7747774</code>
-  <code>YES</code>
-  <p>Во втором примере все цифры числа — счастливые, а их общее количество — 7, поэтому ответ «YES».</p>
+    <h4>Пример 2</h4>
+    <code>7747774</code>
+    <code>YES</code>
+    <p>Во втором примере все цифры числа — счастливые, а их общее количество — 7, поэтому ответ «YES».</p>
 
-  <h4>Пример 3</h4>
-  <code>10000000000</code>
-  <code>NO</code>
-  <p>В третьем примере в числе нет счастливых цифр, поэтому ответ «NO».</p>
+    <h4>Пример 3</h4>
+    <code>10000000000</code>
+    <code>NO</code>
+    <p>В третьем примере в числе нет счастливых цифр, поэтому ответ «NO».</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -985,26 +1007,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — количество нерасследованных преступлений.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 -1 -1 1
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 8
 1 -1 1 -1 -1 1 1 1
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 11
 -1 -1 2 -1 -1 -1 -1 -1 -1 -1 -1
 </pre>
-  <code>8</code>
+    <code>8</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1087,7 +1112,8 @@ int main() {
   <p>Для каждого набора входных данных выведите единственную строку, содержащую дивизион в формате «Division X», где X
   — целое число от 1 до 4, представляющее дивизион для соответствующего рейтинга.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 -789
@@ -1107,13 +1133,14 @@ Division 3
 Division 2
 Division 1
 </pre>
-  <p>Для наборов входных данных 1-4 соответствующие оценки составляют -789, 1299, 1300, 1399, поэтому все они находятся в дивизионе 4.</p>
+    <p>Для наборов входных данных 1-4 соответствующие оценки составляют -789, 1299, 1300, 1399, поэтому все они находятся в дивизионе 4.</p>
 
-  <p>Для пятого набора соответствующая оценка составляет 1400, поэтому он находится в дивизионе 3.</p>
+    <p>Для пятого набора соответствующая оценка составляет 1400, поэтому он находится в дивизионе 3.</p>
 
-  <p>Для шестого набора соответствующий рейтинг составляет 1679, поэтому он находится в дивизионе 2.</p>
+    <p>Для шестого набора соответствующий рейтинг составляет 1679, поэтому он находится в дивизионе 2.</p>
 
-  <p>Для седьмого набора соответствующий рейтинг составляет 2300, поэтому он находится в дивизионе 1.</p>
+    <p>Для седьмого набора соответствующий рейтинг составляет 2300, поэтому он находится в дивизионе 1.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1182,7 +1209,8 @@ int main() {
   </ul>
   <p>Вы можете выводить YES и NO в любом регистре (например, строки yEs, yes, Yes и YES будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 213132
@@ -1198,11 +1226,12 @@ YES
 YES
 NO
 </pre>
-  <p>В первом наборе входных данных примера сумма первых трёх цифр равна 2+1+3=6, сумма последних трёх цифр равна 1+3+2=6. Суммы равны. Следовательно, ответ равен «YES».</p>
+    <p>В первом наборе входных данных примера сумма первых трёх цифр равна 2+1+3=6, сумма последних трёх цифр равна 1+3+2=6. Суммы равны. Следовательно, ответ равен «YES».</p>
 
-  <p>Во втором наборе входных данных примера сумма первых трёх цифр равна 9+7+3=19, сумма последних трёх цифр равна 8+9+4=21. Суммы не равны. Следовательно, ответ равен «NO».</p>
+    <p>Во втором наборе входных данных примера сумма первых трёх цифр равна 9+7+3=19, сумма последних трёх цифр равна 8+9+4=21. Суммы не равны. Следовательно, ответ равен «NO».</p>
 
-  <p>В третьем наборе входных данных примера сумма первых трёх цифр равна 0+4+5=9, сумма последних трёх цифр равна 2+0+7=9. Суммы равны. Следовательно, ответ равен «YES».</p>
+    <p>В третьем наборе входных данных примера сумма первых трёх цифр равна 0+4+5=9, сумма последних трёх цифр равна 2+0+7=9. Суммы равны. Следовательно, ответ равен «YES».</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1276,13 +1305,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственной строкой максимально возможную высоту пирамиды.</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>25</code>
-  <code>4</code>
+    <h4>Пример 2</h4>
+    <code>25</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1353,24 +1385,27 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — наименьшее возможное количество трапез, пропущенных Василием.</p>
 
-  <h4>Пример 1</h4>
-  <code>3 2 1</code>
-  <code>1</code>
-  <p>В первом примере из условия Василий пропустил бы один ужин, если, например, приехал бы к завтраку, пробыл два дня в санатории (включая день приезда) и уехал после завтрака третьего дня.</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3 2 1</code>
+    <code>1</code>
+    <p>В первом примере из условия Василий пропустил бы один ужин, если, например, приехал бы к завтраку, пробыл два дня в санатории (включая день приезда) и уехал после завтрака третьего дня.</p>
 
-  <h4>Пример 2</h4>
-  <code>1 0 0</code>
-  <code>0</code>
-  <p>Во втором примере из условия Василий мог приехать к завтраку, сходить на него, и сразу же покинуть санаторий, не пропустив ни одной трапезы.</p>
+    <h4>Пример 2</h4>
+    <code>1 0 0</code>
+    <code>0</code>
+    <p>Во втором примере из условия Василий мог приехать к завтраку, сходить на него, и сразу же покинуть санаторий, не пропустив ни одной трапезы.</p>
 
-  <h4>Пример 3</h4>
-  <code>1 1 1</code>
-  <code>0</code>
-  <p>В третьем примере из условия Василий мог пробыть в санатории один полный день, не пропустив ни одной трапезы.</p>
+    <h4>Пример 3</h4>
+    <code>1 1 1</code>
+    <code>0</code>
+    <p>В третьем примере из условия Василий мог пробыть в санатории один полный день, не пропустив ни одной трапезы.</p>
 
-  <h4>Пример 4</h4>
-  <code>1000000000000000000 0 1000000000000000000</code>
-  <code>999999999999999999</code>
+    <h4>Пример 4</h4>
+    <code>1000000000000000000 0 1000000000000000000</code>
+    <code>999999999999999999</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1452,6 +1487,8 @@ int main() {
 
   <p>Во вторую строку выведите n целых чисел b₁, b₂, ..., bₙ, где bᵢ — суммарное количество прогулок в i-й день в соответствии с найденным решением (aᵢ ≤ bᵢ для всех i от 1 до n). Если решений несколько, разрешается вывести любое из них.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 5
@@ -1481,6 +1518,7 @@ int main() {
 0
 2 4 3 5
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1560,44 +1598,47 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимально возможную разницу между углами секторов пиццы которые достанутся Васе и Пете.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 90 90 90 90
 </pre>
-  <code>0</code>
-  <p>В первом тесте Вася может взять 1 и 2 куски, а Петя 3 и 4. Тогда ответ равен |(90 + 90) - (90 + 90)| = 0</p>
+    <code>0</code>
+    <p>В первом тесте Вася может взять 1 и 2 куски, а Петя 3 и 4. Тогда ответ равен |(90 + 90) - (90 + 90)| = 0</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 100 100 160
 </pre>
-  <code>40</code>
+    <code>40</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 1
 360
 </pre>
-  <code>360</code>
-  <p>В третьем тесте есть только один кусок, который полностью достанется Васе или Пете. Поэтому ответ равен |360 - 0| = 360.</p>
+    <code>360</code>
+    <p>В третьем тесте есть только один кусок, который полностью достанется Васе или Пете. Поэтому ответ равен |360 - 0| = 360.</p>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 4
 170 30 150 10
 </pre>
-  <code>0</code>
-  <p>В четвертом тесте Вася может взять 1 и 4 куски, тогда Пете достанутся 2 и 3 куски. Ответ в этом случае равен |(170 + 10) - (30 + 150)| = 0.</p>
+    <code>0</code>
+    <p>В четвертом тесте Вася может взять 1 и 4 куски, тогда Пете достанутся 2 и 3 куски. Ответ в этом случае равен |(170 + 10) - (30 + 150)| = 0.</p>
 
-  <h4>Пример 8</h4>
+    <h4>Пример 8</h4>
 <pre>
 5
 110 90 70 50 40
 </pre>
-  <code>40</code>
-  <p>Куски пиццы должны идти подряд, то есть быть соседними. Пицца круглая, поэтому нужно учитывать что последний кусок пиццы и первый - тоже соседние.</p>
+    <code>40</code>
+    <p>Куски пиццы должны идти подряд, то есть быть соседними. Пицца круглая, поэтому нужно учитывать что последний кусок пиццы и первый - тоже соседние.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1692,25 +1733,27 @@ int main() {
 
   <p>Считайте, что колонны пронумерованы от 1 до n в порядке их задания во входных данных. Если решений несколько, выведите любое.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 5 6
 8 9
 10 3
 </pre>
-  <code>3</code>
-  <p>В первом примере, если вы не дадите приказ какой-либо колонне сменить шаг, то количество солдат, начинающих марш с левой ноги, будет равно 5 + 8 + 10 = 23, а с правой — 6 + 9 + 3 = 18. В таком случае красота парада будет равна |23 - 18| = 5.</p>
-  <p>Если вы дадите приказ сменить ногу третьей колонне, то количество солдат, марширующих с левой ноги, будет равно 5 + 8 + 3 = 16, а с правой — 6 + 9 + 10 = 25. В таком случае красота парада будет равна |16 - 25| = 9.</p>
-  <p>Каким-либо другим приказом невозможно достичь большей красоты. Таким образом, максимально достижимая красота равна 9.</p>
+    <code>3</code>
+    <p>В первом примере, если вы не дадите приказ какой-либо колонне сменить шаг, то количество солдат, начинающих марш с левой ноги, будет равно 5 + 8 + 10 = 23, а с правой — 6 + 9 + 3 = 18. В таком случае красота парада будет равна |23 - 18| = 5.</p>
+    <p>Если вы дадите приказ сменить ногу третьей колонне, то количество солдат, марширующих с левой ноги, будет равно 5 + 8 + 3 = 16, а с правой — 6 + 9 + 10 = 25. В таком случае красота парада будет равна |16 - 25| = 9.</p>
+    <p>Каким-либо другим приказом невозможно достичь большей красоты. Таким образом, максимально достижимая красота равна 9.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 6 5
 5 6
 </pre>
-  <code>1</code>
+    <code>1</code>
 
   <h4>Пример 3</h4>
 <pre>
@@ -1722,7 +1765,8 @@ int main() {
 23 54
 12 32
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
