--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp3.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp3.html
@@ -223,7 +223,8 @@ for (int i = 0; i &lt; n; i++) {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите «STAIR» если цифры образуют лестницу, «PEAK» если цифры образуют пик, и «NONE» в противном случае (выводите строки без кавычек).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1 2 3
@@ -243,6 +244,7 @@ NONE
 NONE
 STAIR
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -304,21 +306,24 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите минимальное количество клавиатур, которые могли быть украдены, если никто из сотрудников магазина не помнит значение x.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 10 13 12 8
 </pre>
-  <code>2</code>
-  <p>В первом примере, если x=8, то минимальное количество клавиатур, украденных из магазина, равно 2. То есть были украдены компьютеры с номерами 9 и 11.</p>
+    <code>2</code>
+    <p>В первом примере, если x=8, то минимальное количество клавиатур, украденных из магазина, равно 2. То есть были украдены компьютеры с номерами 9 и 11.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 7 5 6 4 8
 </pre>
-  <code>0</code>
-  <p>Во втором примере, если x=4, то ни одна клавиатура не была украдена из магазина.</p>
+    <code>0</code>
+    <p>Во втором примере, если x=4, то ни одна клавиатура не была украдена из магазина.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -382,26 +387,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n целых чисел, разделенных пробелом: i-ое число должно быть равно номеру друга, от которого получил подарок друг с номером i.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 2 3 4 1
 </pre>
-  <code>4 1 2 3</code>
+    <code>4 1 2 3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 3 2
 </pre>
-  <code>1 3 2</code>
+    <code>1 3 2</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 2
 1 2
 </pre>
-  <code>1 2</code>
+    <code>1 2</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -458,7 +466,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите любое целое число, которое встречается в массиве хотя бы три раза, или -1, если такого числа нет.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1
@@ -491,6 +500,7 @@ int main() {
   <p>В четвертом наборе входных данных 4 встречается три раза, поэтому 4 — ответ.</p>
   <p>В пятом наборе входных данных каждое из чисел 1, 2 и 3 встречается хотя бы три раза, поэтому любое из них может быть ответом.</p>
   <p>В шестом наборе входных данных все элементы массива различны, поэтому ни одно число не встречается хотя бы три раза, и ответ равен -1.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -566,7 +576,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора тестовых данных выведите одно целое число — минимальное значение величины |max(A) - min(B)| при оптимальном разбиении всех спортсменов на команды. Каждый из спортсменов должен оказаться членом ровно одной из двух команд.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 5
@@ -587,16 +599,17 @@ int main() {
 999
 50
 </pre>
-  <p>Первый набор тестовых данных разобран в условии.</p>
-  <p>Во втором наборе одно из оптимальных разбиений имеет вид A=[2, 1], B=[3, 2, 4, 3], поэтому ответ равен |2-2|=0.</p>
+    <p>Первый набор тестовых данных разобран в условии.</p>
+    <p>Во втором наборе одно из оптимальных разбиений имеет вид A=[2, 1], B=[3, 2, 4, 3], поэтому ответ равен |2-2|=0.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1
 4
 7 9 3 1
 </pre>
-  <code>2</code>
+    <code>2</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -685,7 +698,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите ответ на него — «YES» (без кавычек) если возможно получить массив с нечетной суммой элементов, и «NO» в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2
@@ -706,6 +720,7 @@ YES
 NO
 NO
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -768,20 +783,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите объемную долю в процентах апельсинового сока в коктейле Васи. Ответ будет считаться верным, если его абсолютная или относительная погрешность не превышает 10⁻⁴.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 50 50 100
 </pre>
-  <code>66.666666666667</code>
-  <p>Пояснение к первому примеру: пусть Вася возьмет из холодильника каждого напитка по x миллилитров. Тогда количество чистого сока, которое будет в коктейле равно x/2 + x/2 +x = 2∙x миллилитров. Общий объем коктейля равен 3·x миллилитров, значит, объемная доля сока в коктейле равна 2∙x/(3∙x) = 2/3, то есть, 66.(6) процентов.</p>
+    <code>66.666666666667</code>
+    <p>Пояснение к первому примеру: пусть Вася возьмет из холодильника каждого напитка по x миллилитров. Тогда количество чистого сока, которое будет в коктейле равно x/2 + x/2 +x = 2∙x миллилитров. Общий объем коктейля равен 3·x миллилитров, значит, объемная доля сока в коктейле равна 2∙x/(3∙x) = 2/3, то есть, 66.(6) процентов.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 0 25 50 75
 </pre>
-  <code>37.500000000000</code>
+    <code>37.500000000000</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -844,39 +862,42 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — длину кратчайшего пути между станциями с номерами s и t.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 2 3 4 9
 1 3
 </pre>
-  <code>5</code>
-  <p>В первом примере длина пути 1 → 2 → 3 равна 5, длина пути 1 → 4 → 3 равна 13</p>
+    <code>5</code>
+    <p>В первом примере длина пути 1 → 2 → 3 равна 5, длина пути 1 → 4 → 3 равна 13</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 5 8 2 100
 4 1
 </pre>
-  <code>15</code>
-  <p>Во втором примере длина пути 4 → 1 равна 100, длина пути 4 → 3 → 2 → 1 равна 15</p>
-  <h4>Пример 3</h4>
+    <code>15</code>
+    <p>Во втором примере длина пути 4 → 1 равна 100, длина пути 4 → 3 → 2 → 1 равна 15</p>
+    <h4>Пример 3</h4>
 <pre>
 3
 1 1 1
 3 1
 </pre>
-  <code>1</code>
-  <p>В третьем примере длина пути 3 → 1 равна 1, длина пути 3 → 2 → 1 равна 2.</p>
-  <h4>Пример 4</h4>
+    <code>1</code>
+    <p>В третьем примере длина пути 3 → 1 равна 1, длина пути 3 → 2 → 1 равна 2.</p>
+    <h4>Пример 4</h4>
 <pre>
 3
 31 41 59
 1 1
 </pre>
-  <code>0</code>
-  <p>В четвертом примере номера станций совпадают, поэтому кратчайшее расстояние равно 0</p>
+    <code>0</code>
+    <p>В четвертом примере номера станций совпадают, поэтому кратчайшее расстояние равно 0</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -960,7 +981,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите в отдельной строке одно слово: «YES» (без кавычек), если кубы могут быть отсортированы при заданных условиях, и «NO» (без кавычек) иначе.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5
@@ -975,9 +997,10 @@ YES
 YES
 NO
 </pre>
-  <p>В первом наборе входных данных возможно отсортировать все кубы, используя 7 операций обмена.</p>
-  <p>Во втором наборе входных данных все кубы уже отсортированы.</p>
-  <p>В третьем наборе входных данных мы можем сделать 0 обменов, однако кубы еще не отсортированы, поэтому отсортировать мы их не можем.</p>
+    <p>В первом наборе входных данных возможно отсортировать все кубы, используя 7 операций обмена.</p>
+    <p>Во втором наборе входных данных все кубы уже отсортированы.</p>
+    <p>В третьем наборе входных данных мы можем сделать 0 обменов, однако кубы еще не отсортированы, поэтому отсортировать мы их не можем.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1099,15 +1122,18 @@ int main() {
   <p>Выведите «YES» (без кавычек), если из данных участников можно собрать две команды с одинаковой силой, и «NO» (без кавычек) — иначе.</p>
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную).</p>
 
-  <h4>Пример 1</h4>
-  <code>1 3 2 1 2 1</code>
-  <code>YES</code>
-  <p>В первом тесте можно взять в первую команду 1-го, 2-го и 6-го участника, во вторую — 3-го, 4-го и 5-го: силы команд будут 1 + 3 + 1 = 2 + 1 + 2 = 5.</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 3 2 1 2 1</code>
+    <code>YES</code>
+    <p>В первом тесте можно взять в первую команду 1-го, 2-го и 6-го участника, во вторую — 3-го, 4-го и 5-го: силы команд будут 1 + 3 + 1 = 2 + 1 + 2 = 5.</p>
 
-  <h4>Пример 2</h4>
-  <code>1 1 1 1 1 99</code>
-  <code>NO</code>
-  <p>Во втором тесте участник номер 6 слишком сильный и его команда будет заведомо сильнее другой.</p>
+    <h4>Пример 2</h4>
+    <code>1 1 1 1 1 99</code>
+    <code>NO</code>
+    <p>Во втором тесте участник номер 6 слишком сильный и его команда будет заведомо сильнее другой.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1172,21 +1198,24 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — номер столовой, в которой Влад не был как можно дольше.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 1 3 2 1 2
 </pre>
-  <code>3</code>
-  <p>Рассмотрим первый тест. В нём есть три столовые, причём последнее посещение столовых с номерами 1 и 2 состоялись после последнего посещения столовой с номером 3, поэтому эта столовая — искомая.</p>
+    <code>3</code>
+    <p>Рассмотрим первый тест. В нём есть три столовые, причём последнее посещение столовых с номерами 1 и 2 состоялись после последнего посещения столовой с номером 3, поэтому эта столовая — искомая.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 2 1 2 2 4 1
 </pre>
-  <code>2</code>
-  <p>Во втором тесте также есть три столовые с номерами 1, 2 и 4. Столовые с номерами 1 и 4 были посещены после последнего посещения столовой с номером 2, поэтому ответ 2. Обратите внимание, что Влад мог пропустить некоторые номера в нумерации столовых.</p>
+    <code>2</code>
+    <p>Во втором тесте также есть три столовые с номерами 1, 2 и 4. Столовые с номерами 1 и 4 были посещены после последнего посещения столовой с номером 2, поэтому ответ 2. Обратите внимание, что Влад мог пропустить некоторые номера в нумерации столовых.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1248,41 +1277,44 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Если c помощью описанной в условии операции невозможно сделать все числа в массиве одинаковыми, то выведите «NO» (без кавычек). В противном случае выведите «YES» (без кавычек).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 1 3 3 2 1
 </pre>
-  <code>YES</code>
-  <p>В первом примере следует выбрать x = 1, после чего прибавить его к первому и последнему элементам и вычесть из второго и третьего.</p>
+    <code>YES</code>
+    <p>В первом примере следует выбрать x = 1, после чего прибавить его к первому и последнему элементам и вычесть из второго и третьего.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 2 3 4 5
 </pre>
-  <code>NO</code>
+    <code>NO</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 5
 1 3 3 4 4
 </pre>
-  <code>NO</code>
+    <code>NO</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 5
 2 0 0 4 4
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 5</h4>
+    <h4>Пример 5</h4>
 <pre>
 5
 2 0 0 3 3
 </pre>
-  <code>NO</code>
+    <code>NO</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1333,7 +1365,7 @@ int main() {
       if ((tmp == a + (a - b)) ||
           (tmp == b - (a - b)) ||
           (a - tmp == tmp - b)) {
-         c = tmp;
+        c = tmp;
       } else {
         res = false;
       }
@@ -1376,7 +1408,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>На каждый набор входных данных выведите ответ. Если возможно разделить всех студентов на две равные группы и выбрать дни для занятий так, чтобы всем студентам было удобно, выведите «YES» (без кавычек). В противном случае выведите «NO» (без кавычек).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 4
@@ -1392,8 +1425,9 @@ int main() {
 YES
 NO
 </pre>
-  <p>В первом наборе входных данных возможно распределить студентов так, чтобы удовлетворить всем описанным условиям. Для этого в одну группу нужно распределить первого и третьего студентов, которые будут заниматься в четверг, то есть в четвертый будний день, а в другую группу — второго и четвертого студентов, которые будут заниматься во вторник, то есть во второй будний день.</p>
-  <p>Во втором наборе входных данных невозможно разделить студентов на группы так, чтобы группы занимались в разные будние дни.</p>
+    <p>В первом наборе входных данных возможно распределить студентов так, чтобы удовлетворить всем описанным условиям. Для этого в одну группу нужно распределить первого и третьего студентов, которые будут заниматься в четверг, то есть в четвертый будний день, а в другую группу — второго и четвертого студентов, которые будут заниматься во вторник, то есть во второй будний день.</p>
+    <p>Во втором наборе входных данных невозможно разделить студентов на группы так, чтобы группы занимались в разные будние дни.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1493,7 +1527,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное целое число — максимальное количество пересечений, при оптимальном расположении проводов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 7
@@ -1511,9 +1546,10 @@ int main() {
 0
 3
 </pre>
-  <p>Первый пример показан на втором рисунке в условии.</p>
-  <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
-  <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+    <p>Первый пример показан на втором рисунке в условии.</p>
+    <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
+    <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1676,7 +1712,8 @@ n = 4
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите 2n строк, каждая содержащая 2n символов без пробелов — шахматную доску, как описано в условии. Не выводите пустые строки между наборами входных данных.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1
@@ -1706,6 +1743,7 @@ n = 4
 ..##..##
 ..##..##
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
