--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250606-Blitz2025s1.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250606-Blitz2025s1.html
@@ -49,7 +49,8 @@
 
   <p>Вы можете вывести ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 abc
@@ -71,6 +72,7 @@ YES
   <p>Во втором наборе входных данных примера мы можем поменять местами c и b: acb→abc.</p>
   <p>В третьем наборе входных данных примера мы можем поменять местами b и a: bac→abc.</p>
   <p>В четвертом наборе входных данных примера невозможно получить abc с помощью не более одной операции.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -146,7 +148,8 @@ int main() {
   <p>Для каждого набора входных данных выведите одно целое число — максимальное произведение, которое может получить Славик, добавив 1
   к ровно одной из своих цифр.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4
@@ -164,6 +167,7 @@ int main() {
 432
 430467210
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -266,7 +270,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — общее количество очков.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 X.........
@@ -318,6 +323,7 @@ XXXXXXXXXX
 </pre>
   <p>В первом примере на внешнем кольце находятся три стрелы, каждая из которых стоит 1 очко, на следующем кольце находятся две стрелы, каждая из которых стоит 3 очка, и на следующем кольце находятся две стрелы, каждая из которых стоит 4 очка. Общий счет равен 3x1+2x3+2x4=17.</p>
   <p>Во втором примере стрел нет, поэтому счет равен 0.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -394,7 +400,8 @@ int main() {
 
   <p>Вы можете вывести ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 8 1 2
@@ -413,6 +420,7 @@ YES
   <p>В первом примере, выбрав цифры 8 и 2, мы можем получить сумму 8+2=10, что удовлетворяет условию, поэтому ответ «YES».</p>
   <p>Во втором примере, любая комбинация выбранных цифр не будет иметь сумму, равную или большую 10, поэтому ответ «NO» (обратите внимание, что мы не можем выбрать цифру на одной позиции дважды).</p>
   <p>В третьем примере, любая комбинация выбранных цифр будет иметь сумму, равную 18, поэтому ответ «YES».</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -477,7 +485,8 @@ int main() {
 
   <p>Можно показать, что согласно ограничениям в условии, для каждого теста существует ровно один победитель.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5
@@ -515,6 +524,7 @@ int main() {
     <li>Ответ 5 имеет качество 1.</li>
   </ul>
   <p>Среди этих ответов, победителем является Ответ 4 с наивысшим качеством.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -582,7 +592,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого тестового случая выведите одну строку, содержащую слово, состоящее из строчных латинских букв (a–z), которое написано вертикально в одном столбце сверху вниз.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 ........
@@ -633,6 +644,7 @@ the
 game
 aaaaaaaa
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
