--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250629-CentrRus2021q.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250629-CentrRus2021q.html
@@ -88,7 +88,7 @@
 <!-- Задача F. Плохой сосед -->
 <article class="article">
   <div class="anchor" id="task6"></div>
-  <h3>Задача F. Плохой сосед/h3>
+  <h3>Задача F. Плохой сосед</h3>
 
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
