--- a/src/components/alg/alg-pract/codeforces/pages/elem-230326-Round860.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-230326-Round860.html
@@ -51,7 +51,8 @@
 
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 3
@@ -89,6 +90,7 @@ No
   <p>Во втором наборе входных данных можно показать, что выполнить условия невозможно.</p>
   <p>В третьем наборе входных данных можно поменять местами числа a1 и b1, после чего массив a станет равным [99,99], а массив b станет равным [100,100] и оба условия будут выполнены.</p>
   <p>В пятом наборе входных данных можно поменять местами a7 и b7 , a8 и b8, a9 и b9, после чего массив a станет равным [1,2,3,4,5,6,6,6,6], а массив b станет равным [9,9,9,9,9,9,7,8,9] и оба условия будут выполнены.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -174,7 +176,8 @@ int main() {
 
   <p>Иначе выведите m целых чисел p1, p2, …, pm (1 ≤ pi ≤ 50000) — номера победителей лотереи в дни с 1 по m. Если существует несколько корректных решений, выведите любое из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3
@@ -207,6 +210,7 @@ int main() {
   <p>В первом наборе входных данных один из подходящих ответов [8,2,1], так как участник с номером 8 участвовал в день 1, но не участвовал в дни 2 и 3; участник с номером 2 участвовал в день 2, но не участвовал в день 3; а участник с номером 1 участвовал в день 3. Обратите внимание, что это не единственный возможный ответ, например, [8,9,4] также является верным ответом.</p>
   <p>Во втором наборе входных данных оба участника лотереи участвовали в обоих днях лотереи, значит любой возможный победитель лотереи в день 1 обязательно участвовал в день 2, значит подходящего ответа не существует.</p>
   <p>В третьем наборе входных данных в дни 2, 3 и 4 участвовал только один участник, а в день 1  единственный участник, не участвовавший в лотерее в днях 2,3,4 — это участник 2. Значит [2,1,4,3] — единственно верный ответ.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -334,7 +338,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных, выведите минимальное количество ценников необходимое для описания стоимостей всех товаров в магазине.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 4
@@ -376,6 +381,7 @@ int main() {
   <p>В первом наборе входных данных можно выбрать d1=4, d2=6, d3=7, d4=5. Тогда стоимости товаров будут равны: [12,12,35,35]. Для их описания хватит 2 ценников, первый ценник для c1,c2 и второй ценник для c3,c4. Можно показать, что при любом корректном выборе di для описания всех товаров понадобится как минимум 2 ценника. Также обратите внимание, что этот пример иллюстрируется картинкой в условии задачи.</p>
   <p>Во втором наборе входных данных при d1=4, d2=2, d3=10 стоимости всех товаров будут равны 20. Таким образом 1 ценника хватит для описания всех товаров. Обратите внимание, что ai делится на di для всех i, что является необходимым условием.</p>
   <p>В третьем наборе входных данных нетрудно понять, что для описания 2, 3 и 4 товара может быть использован один ценник. И дополнительно понадобится по ценнику для товаров 1 и 5. Итого 3 ценника.</p>
+  </details>
 </article>
 
 
@@ -413,7 +419,8 @@ int main() {
 
   <p>Если возможных ответов несколько, вы можете вывести любой из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 4
@@ -449,6 +456,7 @@ Yes
   <p>В первом наборе входных данных max(a1,…,an)-min(a1,…,an)=9. Поэтому элементы можно переставить следующим образом: [-5,-2,3,4]. Несложно видеть, что для такой расстановки значение |al+…+ar| всегда не больше 7, а значит и меньше 9.</p>
   <p>Во втором наборе входных данных можно переставить элементы массива следующим образом: [-3,2,-3,2,2]. Тогда максимальный модуль суммы будет достигаться на подмассиве [-3,2,-3], и будет равен |-3+2+-3|=|-4|=4, что меньше чем 5.</p>
   <p>В четвёртом тестовом примере любая перестановка массива a  подойдёт в качестве ответа, в том числе и [-1,0,1].</p>
+  </details>
 </article>
 
 
@@ -486,6 +494,8 @@ Yes
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите n-1 число — значения f([ai,ai+1,…,an]) для каждого i от 1 до n-1.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3
@@ -511,6 +521,7 @@ Yes
 <pre>
 0 0 1 1 1 1 1 1 1 0 1 0 1 0 2 1 1 1
 </pre>
+  </details>
 </article>
 
 
@@ -551,6 +562,8 @@ Yes
 
   <p>Если существует несколько решений, выведите любое из них.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 4 2
@@ -578,4 +591,5 @@ Yes
 </pre>
   <p>В первом тестовом примере Дед Ахмед может купить всего 1  подарок. После определить в первый класс две коробки с 7  подарками. 7+7=14 нацело делится на 2. А во второй класс достанутся коробки с 1,7,127 подарками. 1+7+127=135 нацело делится на 3.</p>
   <p>Во втором тестовом примере классы имеют размеры 6, 1, 9 и 3. Покажем, что имеющихся коробок достаточно, чтобы распределить в классы размеров 6, 9, 3, а в класс размера 1 можно купить коробку любого размера. В класс размера 6 отправим коробки размеров 7, 1, 7, 6, 5, 4. 7+1+7+6+5+4=30 нацело делится на 6. В класс размера 9 отправим коробки размеров 1, 2, 3, 8, 3, 2, 9, 8, 9. 1+2+3+8+3+2+9+8+9=45 нацело делится на 9. В класс размера 3 отправятся оставшиеся коробки размеров 6, 5, 4. 6+5+4=15 нацело делится на 3.</p>
+  </details>
 </article>
