--- a/src/components/alg/alg-pract/codeforces/pages/elem-230721-Round886.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-230721-Round886.html
@@ -42,7 +42,8 @@
 
   <p>Вы можете вывести ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 8 1 2
@@ -61,6 +62,7 @@ YES
   <p>В первом примере, выбрав цифры 8 и 2, мы можем получить сумму 8+2=10, что удовлетворяет условию, поэтому ответ «YES».</p>
   <p>Во втором примере, любая комбинация выбранных цифр не будет иметь сумму, равную или большую 10, поэтому ответ «NO» (обратите внимание, что мы не можем выбрать цифру на одной позиции дважды).</p>
   <p>В третьем примере, любая комбинация выбранных цифр будет иметь сумму, равную 18, поэтому ответ «YES».</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -125,7 +127,8 @@ int main() {
 
   <p>Можно показать, что согласно ограничениям в условии, для каждого теста существует ровно один победитель.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5
@@ -163,6 +166,7 @@ int main() {
     <li>Ответ 5 имеет качество 1.</li>
   </ul>
   <p>Среди этих ответов, победителем является Ответ 4 с наивысшим качеством.</p>
+  </details>
 </article>
 
 
@@ -186,7 +190,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого тестового случая выведите одну строку, содержащую слово, состоящее из строчных латинских букв (a–z), которое написано вертикально в одном столбце сверху вниз.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 ........
@@ -237,6 +242,7 @@ the
 game
 aaaaaaaa
 </pre>
+  </details>
 </article>
 
 
@@ -270,7 +276,8 @@ aaaaaaaa
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — минимальное количество задач, которые нужно удалить, чтобы расстановка задач была сбалансированной.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 5 1
@@ -299,6 +306,7 @@ aaaaaaaa
 </pre>
   <p>В первом примере мы можем удалить первые 2 задачи и составить набор, используя задачи со сложностями [4,5,6], с разницей между соседними задачами равной |5-4|=1≤1 и |6-5|=1≤1.</p>
   <p>Во втором примере мы можем взять одну задачу и составить раунд, используя задачу со сложностью 10.</p>
+  </details>
 </article>
 
 
@@ -333,7 +341,8 @@ aaaaaaaa
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — значение w (w ≥ 1), при котором понадобится ровно c квадратных сантиметров картона.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 3 50
@@ -372,6 +381,7 @@ aaaaaaaa
   <p>Первый пример объяснен в условии.</p>
   <p>Для второго примера выбрано значение w равное 2, таким образом, площадь, покрытая картоном, составляет c=(2⋅2+6)²=10²=100 квадратных сантиметров.</p>
   <p>Для третьего примера выбрано значение w равное 4, что дает площадь покрытия c=(2⋅4+2)²x5=10²x5=100x5=500 квадратных сантиметров.</p>
+  </details>
 </article>
 
 
@@ -403,7 +413,8 @@ aaaaaaaa
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимальное количество лягушек, которых Славик и Михай могут поймать с помощью ловушки.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 5
@@ -440,6 +451,7 @@ aaaaaaaa
   </ul>
   <p>Таким образом, если Славик и Михай поставят ловушку в координате 4, они смогут поймать трех лягушек: лягушек 1, 2 и 4. Можно доказать, что они не смогут поймать больше лягушек.</p>
   <p>Во втором примере Славик и Михай могут поставить ловушку в координате 2 и мгновенно поймать всех трех лягушек.</p>
+  </details>
 </article>
 
 
@@ -477,7 +489,8 @@ W___   ___E
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — количество пар точек, которые не сломают компас.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3
@@ -525,6 +538,7 @@ W___   ___E
     <li>Компас находится в (6,9), утренняя звезда находится в (10,13): компас будет указывать NE.</li>
     <li>Компас находится в (10,13), утренняя звезда находится в (6,9): компас будет указывать SW.</li>
   </ul>
+  </details>
 </article>
 
 
@@ -556,7 +570,8 @@ W___   ___E
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите «YES», если существует такое расположение n солдат, которое удовлетворяет всем m условиям, и «NO» в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 5 3
@@ -597,4 +612,5 @@ YES
     <li>Солдат 3 в лагере с координатой x=-2023.</li>
     <li>Солдат 4 в лагере с координатой x=-2023.</li>
   </ul>
+  </details>
 </article>
