--- a/src/components/alg/alg-pract/codeforces/pages/elem-230921-Round898.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-230921-Round898.html
@@ -43,7 +43,8 @@
 
   <p>Вы можете вывести ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 abc
@@ -65,6 +66,7 @@ YES
   <p>Во втором наборе входных данных примера мы можем поменять местами c и b: acb→abc.</p>
   <p>В третьем наборе входных данных примера мы можем поменять местами b и a: bac→abc.</p>
   <p>В четвертом наборе входных данных примера невозможно получить abc с помощью не более одной операции.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -134,7 +136,8 @@ int main() {
   <p>Для каждого набора входных данных выведите одно целое число — максимальное произведение, которое может получить Славик, добавив 1
   к ровно одной из своих цифр.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4
@@ -152,6 +155,7 @@ int main() {
 432
 430467210
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -248,7 +252,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — общее количество очков.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 X.........
@@ -300,6 +305,7 @@ XXXXXXXXXX
 </pre>
   <p>В первом примере на внешнем кольце находятся три стрелы, каждая из которых стоит 1 очко, на следующем кольце находятся две стрелы, каждая из которых стоит 3 очка, и на следующем кольце находятся две стрелы, каждая из которых стоит 4 очка. Общий счет равен 3x1+2x3+2x4=17.</p>
   <p>Во втором примере стрел нет, поэтому счет равен 0.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -370,7 +376,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — минимальное количество операций, необходимых для удаления всех черных ячеек.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 6 3
@@ -406,6 +413,7 @@ WWW
   <code>WWBWBWW→WWWWWWW</code>
   <p>В третьем наборе входных данных примера вы можете выполнить следующие операции:</p>
   <code>BWBWB→BWWWW→WWWWW</code>
+  </details>
 </article>
 
 
@@ -448,7 +456,8 @@ a = |3124625|
 
   <p>Можно доказать, что при таких ограничениях всегда существует такое значение h.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 7 9
@@ -472,6 +481,7 @@ a = |3124625|
   <p>Первый пример изображен в условии. С h=4 нам потребуется 8 единиц воды, но если увеличить h до 5, нам потребуется 13 единиц воды, что больше, чем x=9. Поэтому оптимальное значение h=4.</p>
   <p>Во втором примере случае мы можем выбрать h=4 и добавить 3 единицы к каждой колонне, используя в общей сложности 9 единиц воды. Можно показать, что это оптимально.</p>
   <p>В третьем примере случае мы можем выбрать h=2 и использовать всю нашу воду, поэтому это оптимально.</p>
+  </details>
 </article>
 
 
@@ -506,7 +516,8 @@ a = |3124625|
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число, длину максимального непрерывного подмассива, удовлетворяющего условиям, или 0, если такого подмассива нет.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 5 12
@@ -535,6 +546,7 @@ a = |3124625|
   <p>В первом примере Лука может выбрать подмассив с l=1 и r=3.</p>
   <p>Во втором примере Лука может выбрать подмассив с l=3 и r=4.</p>
   <p>В третьем примере Лука может выбрать подмассив с l=2 и r=2.</p>
+  </details>
 </article>
 
 
@@ -564,7 +576,8 @@ a = |3124625|
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимальное количество монет, которое вы можете получить.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 ABBA
@@ -592,6 +605,7 @@ AAA
   <code>ABA→BCA</code>
   <p>В третьем примере вы можете выполнить следующие операции, чтобы получить 3 монеты:</p>
   <code>BAABA→CBABA→CBACB→CCBCB</code>
+  </details>
 </article>
 
 
@@ -629,7 +643,8 @@ AAA
 
   <p>Вы можете выводить ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 3 2 1
@@ -697,4 +712,5 @@ YES
 2___1___4
 </pre>
   <p>Марсель начинает в здании 1, а Валериу начинает в здании 4. Марсель может пойти в здание 4 на своем первом ходу и победить, так как Валериу должен либо пойти в здание 1 (тогда они встретятся на дороге от 1 до 4), либо остаться в здании 4 (тогда они встретятся в здании 4). Таким образом, у Валериу нет стратегии для победы.</p>
+  </details>
 </article>
