--- a/src/components/alg/alg-pract/codeforces/pages/elem-241117-Round988.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241117-Round988.html
@@ -44,7 +44,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите максимальный счет, который можно достичь на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1
@@ -70,6 +71,7 @@
   <p>Во втором тесте Кинич может выполнить одну операцию с i = 1 и j = 2.</p>
 
   <p>В четвертом тесте Кинич может выполнить одну операцию с i = 1 и j = 4.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -144,7 +146,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите два целых числа, одно возможное значение n и m. Если существует несколько возможных ответов, выведите любой.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3
@@ -174,6 +177,7 @@ int main() {
   <code>4 5 6</code>
   <code>7 8 9</code>
   <code>9 10 11</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -267,7 +271,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных, если невозможно построить p, выведите -1 на новой строке. В противном случае выведите n целых чисел p₁, p₂, ... , pₙ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 3
@@ -279,6 +284,7 @@ int main() {
   <p>В первом примере можно показать, что любая перестановка размера 3 содержит два смежных элемента, сумма которых является простым числом. Например, в перестановке [2,3,1] сумма 2+3=5 является простым числом.</p>
 
   <p>Во втором примере мы можем проверить, что пример вывода верен, потому что 1+8, 8+7, 7+3, 3+6, 6+2, 2+4 и 4+5 все составные. Могут быть и другие правильные конструкции.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -382,7 +388,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите минимальное количество усилений, которые она должна собрать, чтобы достичь позиции L. Если это невозможно, выведите -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2 5 50
@@ -423,6 +430,7 @@ int main() {
  <p>Во втором наборе входных данных она не может перепрыгнуть первое препятствие.</p>
 
   <p>В четвертом наборе входных данных, собрав оба усиления, она сможет перепрыгнуть препятствие.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -591,7 +599,8 @@ int main() {
 
   <p>Сумма n по всем наборам входных данных не должна превышать 10⁴.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 5
@@ -636,6 +645,7 @@ int main() {
   <p>Однако обратите внимание, что строки 00 и 11 обе имеют ответ 0, и невозможно различить между ними. Поэтому мы сообщаем IMPOSSIBLE.</p>
 
   <p>Обратите внимание, что этот пример служит только для демонстрации формата взаимодействия. Он не гарантирует, что предоставленные запросы являются оптимальными или однозначно определяют ответ. Тем не менее, можно показать, что существует последовательность из не более чем 5 запросов, которая однозначно определяет пример теста 1.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -774,7 +784,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите целое число на новой строке, минимальное количество атак, которые должны быть выполнены, чтобы победить как минимум k врагов. Если невозможно найти p, при котором в конечном итоге будет побеждено как минимум k врагов, выведите -1 вместо этого.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 5 5 3
@@ -813,6 +824,7 @@ int main() {
   <p>В четвертом примере выбор p=1 позволит нам победить первого врага за 6969697 атак.</p>
 
   <p>В пятом примере выбор p=10 заставит каждого врага получать 1 урон за атаку. Оба врага будут побеждены за 15 атак.</p>
+  </details>
 </article>
 
 
@@ -837,6 +849,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите общее количество различных путей, которыми вы можете добраться до города n, по модулю 998244353.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 5
@@ -877,4 +891,5 @@ int main() {
     <li>Город 1→ Город 3→ Город 5</li>
     <li>Город 1→ Город 2→ Город 3→ Город 5</li>
   </ol>
+  </details>
 </article>
