--- a/src/components/alg/alg-pract/codeforces/pages/elem-241205-Round991.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241205-Round991.html
@@ -43,7 +43,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите максимальное число слов x, такое что первые x слов имеют суммарную длину не больше m.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3 1
@@ -74,6 +75,7 @@ a
 1
 0
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -160,7 +162,8 @@ int main() {
 
   <p>Ответ можно выводить в любом регистре: «yes», «YeS», «nO»  — также являются корректными выводами.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 3
@@ -190,6 +193,7 @@ NO
 NO
 NO
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -271,7 +275,8 @@ int main() {
 
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 123
@@ -300,6 +305,7 @@ YES
   <p>Во втором примере нужно заменить вторую цифру на её квадрат, тогда n станет равно 342=38⋅9.</p>
 
   <p>В третьем примере число уже делится на 9.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -436,7 +442,8 @@ int main()
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите ответ в единственной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 19
@@ -459,6 +466,7 @@ int main()
   <p>Во втором примере подойдёт следующая последовательность операций: 1709→1780→6180→6710.</p>
 
   <p>В четвёртом примере подойдёт следующая последовательность операций: 51476→53176→53616→53651→55351→55431.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -554,7 +562,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — минимальное количество символов, которые могли быть изменены в строке c.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 a
@@ -588,6 +597,7 @@ egaegaeg
 2
 3
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -689,7 +699,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого запроса выведите максимальное значение m, описанное в условии.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5 5
@@ -715,6 +726,7 @@ int main() {
   <p>В первом запросе первого примера 6 mod 3 = 3 mod 3 = 0, можно показать, что для больших m нужное условие выполняться не будет.</p>
 
   <p>В третьем запросе первого примера 14 mod 4 = 2 mod 4 = 6 mod 4 = 2, можно показать, что для больших m нужное условие выполняться не будет.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -860,7 +872,8 @@ int main()
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимальное число компонент связности, которого можно добиться с помощью описанной операции.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 2
@@ -900,6 +913,7 @@ int main()
 4
 3
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
