--- a/src/components/alg/alg-pract/codeforces/pages/elem-241215-Round993.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241215-Round993.html
@@ -37,7 +37,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите количество упорядоченных пар (a,b) на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2
@@ -52,6 +53,7 @@
   <p>В первом наборе входных данных единственная упорядоченная пара, которая подходит, это (a,b)=(1,1).</p>
 
   <p>Во втором наборе входных данных три упорядоченные пары (a,b), которые подходят: (3,1),(2,2),(1,3).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -103,7 +105,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите строку b, строку, которую Ship наблюдает изнутри магазина, на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 qwq
@@ -119,6 +122,7 @@ pppwwwqqq
 qpwwpqwpqpw
 pqpqpqpq
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -180,7 +184,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите максимальное количество обезьян, которые вы можете рассадить по местам.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 10 5 5 10
@@ -197,6 +202,7 @@ int main() {
 84
 </pre>
   <p>Во втором наборе входных данных 6 обезьян хотят сидеть в первом ряду, но доступно только 3 места. Обезьяны, которые не имеют предпочтений, и обезьяны, которые предпочитают сидеть во втором ряду, могут сидеть во втором ряду вместе. Таким образом, ответ равен 3+2=5.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -280,7 +286,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите n чисел b1, b2, ... , bn (1 ≤ bi ≤ n) в новой строке. Можно показать, что массив b всегда можно построить. Если существует несколько возможных массивов, вы можете вывести любой из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2
@@ -305,6 +312,7 @@ int main() {
     <li>При i=3, 1 является единственной возможной модой для [1,1,2].</li>
     <li>При i=4, 1 или 2 могут считаться модой для [1,1,2,2]. Поскольку ai=2, этот массив является допустимым.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -390,7 +398,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите количество подходящих упорядоченных пар (x, y) на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2 2 6 2 12
@@ -416,6 +425,7 @@ int main() {
     <li>(7,63)</li>
   </ul>
   <p>В четвертом наборе входных данных единственная допустимая упорядоченная пара это (1, 1000000000)</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -547,6 +557,8 @@ int main() {
 
   <p>Вы можете выводить «YES» и «NO» в любом регистре (например, строки «yES», «yes» и «Yes» будут распознаны как положительный ответ).</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 3 6
@@ -605,6 +617,7 @@ YES
   <p>которая имеет красоту 4. Таким образом, мы выводим YES.</p>
   <p>В втором запросе, выбирая r=3 и c=5, получается матрица с красотой -3.</p>
   <p>В третьем запросе, выбирая r=3 и c=3, получается матрица с красотой 5.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -711,7 +724,8 @@ signed main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите целое число в новой строке, первый год, в котором процесс становится стабильным.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2
@@ -746,6 +760,7 @@ signed main() {
     <li>В год 4 следующий массив показывает количество плюшевых игрушек у каждого паука: [1,1,0,0,0]. Затем происходит обмен в год 4.</li>
     <li>В год 5 следующий массив показывает количество плюшевых игрушек у каждого паука: [1,1,0,0,0]. Поскольку этот массив такой же, как в предыдущем году, этот год является стабильным.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -941,7 +956,8 @@ int main()
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите целое число в новой строке, первый год, в котором процесс становится стабильным.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2
@@ -976,6 +992,7 @@ int main()
     <li>В год 4 следующий массив показывает количество плюшевых игрушек у каждого паука: [1,4,0,0,0]. Затем происходит обмен в год 4.</li>
     <li>В год 5 следующий массив показывает количество плюшевых игрушек у каждого паука: [1,4,0,0,0]. Поскольку этот массив такой же, как в предыдущем году, этот год является стабильным.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1189,7 +1206,8 @@ int main()
   <h4>Выходные данные</h4>
   <p>Для каждого теста выведите результаты q запросов на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 4 3
@@ -1213,6 +1231,7 @@ int main()
 14 42 5
 </pre>
   <p>Во втором запросе первого набора входных данных, A=[9,5,5,2]. Поэтому сумма равна 1⋅9+2⋅5+3⋅5+4⋅2=42.</p>
+  </details>
 
   <details>
     <summary>Решение Codeforces</summary>
