--- a/src/components/alg/alg-pract/codeforces/pages/elem-241222-Round995.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-241222-Round995.html
@@ -43,7 +43,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимально возможную разность между количеством задач, которые решит Монокарп, и количеством задач, которые решит Стереокарп.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2
@@ -72,6 +73,7 @@
     <li>в третьем наборе входных данных Монокарпу выгодно тренироваться в последний день (и только в него);</li>
     <li>в четвертом наборе входных данных Монокарпу выгодно тренироваться в дни 1,3,4,6, тогда Стереокарп будет тренироваться в дни 2,4,5.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -129,7 +131,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — номер дня, в который Монокарп суммарно преодолеет хотя бы n километров и завершит свое путешествие.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 12 1 5 3
@@ -148,6 +151,7 @@ int main() {
   <p>Во втором примере Монокарп за первый день преодолеет 6 километров. Так как n=6, Монокарп завершит свое путешествие в первый же день.</p>
 
   <p>В третьем примере Монокарп за первые шесть дней преодолеет 3+4+1+3+4+1=16 километров. Так как n=16, Монокарп завершит свое путешествие в шестой день.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -228,7 +232,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите строку из m символов. i-й символ должен быть 1, если Монокарп сдаст экзамен, если он получит i-й билет, или 0, если Монокарп не сдаст.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4 4 3
@@ -257,6 +262,7 @@ int main() {
     <li>третий билет состоит из вопросов [1,2,4]. Монокарп не знает 2-й вопрос, поэтому он не сдаст;</li>
     <li>четвертый билет состоит из вопросов [1,2,3]. Монокарп не знает 2-й вопрос, поэтому он не сдаст.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -382,7 +388,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — количество интересных пар целых чисел для заданной последовательности a.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 4 8 10
@@ -416,6 +423,7 @@ int main() {
     <li>(2,3);</li>
     <li>(3,4).</li>
   </ol>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -560,7 +568,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимально возможный заработок магазина, если можно получить не более k отрицательных отзывов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2 0
@@ -593,6 +602,7 @@ int main() {
     <li>в третьем наборе входных данных надо поставить цену, равную 3. Тогда все клиенты купят по одной елке, и магазин получит два отрицательных отзыва.</li>
     <li>в четвертом наборе входных данных надо поставить цену, равную 7. Тогда два клиента купят по одной елке, и магазин получит один отрицательный отзыв.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -717,7 +727,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q целых чисел — количество различных позиций, в которых может находиться джокер после каждой из операций.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 6 5 3
@@ -738,6 +749,7 @@ int main() {
 2 3 3 3
 2 4 6 8
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -972,6 +984,8 @@ int main(){
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимально возможный счет.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3 6
@@ -1012,6 +1026,7 @@ int main(){
     <li>змейку 1 в позицию 9;</li>
     <li>змейку 4 в позицию 10.</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
