--- a/src/components/alg/alg-pract/codeforces/pages/elem-250209-Round1003.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250209-Round1003.html
@@ -48,7 +48,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите соответствующее существительное во множественном числе на отдельной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 us
@@ -72,6 +73,7 @@ chungi
 ntarsi
 skibidi
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -124,7 +126,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите целое число на новой строке — минимально достижимую длину s.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 baa
@@ -146,6 +149,7 @@ ohio
   </ul>
   <p>Таким образом, ответ равен 1 для первого набора входных данных.</p>
   <p>Во втором наборе входных данных он не может выполнить операцию ни на одном индексе. Поэтому ответ по-прежнему равен длине начальной строки, 8.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -213,7 +217,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре. Например, строки «yEs», «yes», и «Yes» также будут распознаны как положительные ответы.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1 1
@@ -246,6 +251,7 @@ YES
   <p>В третьем наборе входных данных мы можем присвоить a₃ := b₁ - a₃ = 6 - 2 = 4. Последовательность [1,4,4,5] отсортирована в неубывающем порядке.</p>
 
   <p>В последнем случае мы можем применить операции на каждом индексе. Последовательность становится [-1,0,1], которая отсортирована в неубывающем порядке.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -334,7 +340,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре. Например, строки «yEs», «yes», и «Yes» также будут распознаны как положительные ответы.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1 3
@@ -367,6 +374,7 @@ YES
   <p>В третьем наборе входных данных мы можем установить a₂ := b₁ - a₂ = 6 - 4 = 2 и a₃ := b₃ - a₃ = 8 - 6 = 2. Последовательность [2,2,2,5] отсортирована в неубывающем порядке.</p>
 
   <p>В последнем случае мы можем применить операции на каждом индексе. Последовательность становится [-1,0,1], которая отсортирована в неубывающем порядке.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -553,7 +561,8 @@ int main() {
   <p>Для каждого набора входных данных выведите максимальную оценку среди всех возможных перестановок p
   на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2 2
@@ -579,6 +588,7 @@ int main() {
   </ul>
   <p>Максимально возможная оценка равна 41.</p>
   <p>Во втором наборе входных данных одна из оптимальных расстановок окончательного объединенного массива: [4,1,2,1,2,2,2,2,3,2,1,2]. Мы можем вычислить, что оценка равна 162.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -721,7 +731,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных, если возможно построить строку s, выведите её на новой строке. Если существует несколько возможных строк s, выведите любую. В противном случае выведите -1 на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1 2 1
@@ -752,6 +763,7 @@ int main() {
   <p>Среди всех возможных подстрок максимальный баланс равен 1.</p>
 
   <p>Во втором примере подстрока с максимальным балансом — это 0100, которая имеет баланс max(3-1,1-3)=2.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -896,7 +908,8 @@ int main() {
     <li>В противном случае si равно '0'.</li>
   </ul>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3
@@ -937,6 +950,7 @@ int main() {
   <p>В первом примере нет нетривиального пути с 1, 2 или 3 в качестве мажорирующего элемента, поэтому выводимая двоичная строка — «000».</p>
 
   <p>Во втором примере 1→2→4 — это нетривиальный путь с 3 в качестве мажорирующего элемента.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1038,7 +1052,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите количество упорядоченных пар индексов на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 4
@@ -1054,6 +1069,7 @@ int main() {
 18
 </pre>
   <p>В первом наборе входных данных 5 пар индексов: (1,3), (1,4), (2,3), (2,4) и (4,4).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1303,7 +1319,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q целых чисел в одной строке — ответ после каждого запроса по модулю 998244353.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 101
@@ -1332,6 +1349,7 @@ int main() {
     <li>f(s1s2s3)=f(001)=2</li>
   </ul>
   <p>Сумма этих значений равна 10, по модулю 998244353.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
