--- a/src/components/alg/alg-pract/codeforces/pages/elem-250225-Round1006.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250225-Round1006.html
@@ -39,7 +39,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора данных требуется вывести минимальное количество операций для достижения итоговой суммы k в массиве, либо -1, если достичь суммы k невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 21 100 10
@@ -66,6 +67,7 @@
   <p>В шестом примере максимальная сумма в массиве, которую мы можем получить, равна 9 (в единственный элемент присвоить число 9), а значит, сумму 10 нельзя получить никакими операциями.</p>
 
   <p>В седьмом примере нужно сделать единственную операцию a3 = -7.</p>
+  </details>
 </article>
 
 
@@ -107,7 +109,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора данных требуется вывести одно число — максимальное количество подпоследовательностей, равных строке «-_-», если оптимально переставить символы в строке s.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 3
@@ -142,6 +145,7 @@ _-
   <p>Во втором наборе данных есть только один символ «-», а для подпоследовательности «-_-» нужно хотя бы два. Это значит, что для любой перестановки символов ответ будет 0.</p>
 
   <p>В седьмом и восьмом наборах длина строки n &lt; 3, а значит, подпоследовательностей длины 3 не существует.</p>
+  </details>
 </article>
 
 
@@ -178,7 +182,8 @@ _-
 
   <p>Если существует несколько подходящих массивов, выведите любой из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 1 69
@@ -202,6 +207,7 @@ _-
 4 0 3 8 1 2
 0 3
 </pre>
+  </details>
 </article>
 
 
@@ -241,7 +247,8 @@ _-
 
   <p>Если подходящих пар границ несколько, вы можете вывести любую из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 7
@@ -281,6 +288,7 @@ _-
   <p>В четвертом примере выбор l=4 и r=6 превращает массив в [1,1,1,1,1,5,5,6,7,8]. Он отсортирован, а значит, и инверсий в нем нет.</p>
 
   <p>В последнем примере массив изначально отсортирован, поэтому любая операция над отрезком длины хотя бы 2 только увеличит количество инверсий.</p>
+  </details>
 </article>
 
 
@@ -308,7 +316,8 @@ _-
 
   <p>В следующих n строках выводятся пары целых чисел xᵢ, yᵢ (-10⁹ ≤ xᵢ, yᵢ ≤ 10⁹) — координаты i-го посоха. Точки, в которых стоят посохи, должны быть различны.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 0
@@ -341,6 +350,7 @@ _-
 3 5
 1 10
 </pre>
+  </details>
 </article>
 
 
@@ -376,7 +386,8 @@ _-
   <h4>Выходные данные</h4>
   <p>Для каждого набора данных требуется вывести n чисел — элементы n-й строки Великого Магического Треугольника.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1 5
@@ -395,6 +406,7 @@ _-
   <p>В первом примере первая строка Великого Магического Треугольника [5] по определению.</p>
 
   <p>Во втором примере T<sub>2,1</sub> = T<sub>1,1</sub> = 10 и T<sub>2,2</sub> = T<sub>1,1</sub> = 10.</p>
+  </details>
 </article>
 
 
@@ -427,7 +439,8 @@ _-
   <h4>Выходные данные</h4>
   <p>Для каждого набора данных требуется вывести одно число — остаток от деления x=∑rev(n,p) от p=2 до k на 10⁹+7.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 12
 3 2
@@ -472,5 +485,6 @@ _-
     <li>9=100₃→rev(9,3)=001₃=1</li>
   </ul>
   <p>Значит x=9+1=10.</p>
+  </details>
 </article>
 
