--- a/src/components/alg/alg-pract/codeforces/pages/elem-250325-Round1013.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250325-Round1013.html
@@ -41,7 +41,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — минимальное количество цифр, которое достаточно было вытащить стажёру. Если из всех цифр составить дату не получится, выведите число 0.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 10
@@ -59,6 +60,7 @@
 8
 15
 </pre>
+  </details>
 </article>
 
 
@@ -92,7 +94,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите наибольшее возможное количество команд силы хотя бы x.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 6 4
@@ -113,6 +116,7 @@
 2
 1
 </pre>
+  </details>
 </article>
 
 
@@ -145,7 +149,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите искомую перестановку. Если существует несколько решений, выведите любое из них. Если подходящих перестановок не существует, выведите -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 4
@@ -180,6 +185,7 @@
 </pre>
 
   <p>Первая строка содержит номера элементов, а вторая — все сдвиги искомой перестановки.</p>
+  </details>
 </article>
 
 
@@ -200,6 +206,7 @@
  ##
  # #
 </pre>
+
   <p>На рисунке выше в первом ряду находится одна парта длины 3, во втором — одна парта длины 2, а в третьем — две парты длины 1.</p>
 
   <p>Оргкомитет хочет выбрать места так, чтобы длина самой длинной парты была как можно меньше. В частности, эти же 7 столов можно расставить более оптимальным образом, чтобы длины всех парт не превосходили 2:</p>
@@ -209,6 +216,7 @@
  ##
  # #
 </pre>
+
   <p>Зная числа n, m и k, найдите минимальную возможную длину самой длинной парты.</p>
 
   <h4>Входные данные</h4>
@@ -219,7 +227,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — минимальную возможную длину.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3 4 7
@@ -235,6 +244,7 @@
 4
 2
 </pre>
+  </details>
 </article>
 
 
@@ -264,7 +274,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите количество интересных соотношений F(a,b), где 1 ≤ a &lt; b ≤ n;</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 5
@@ -278,6 +289,7 @@
 49
 24317
 </pre>
+  </details>
 </article>
 
 
@@ -320,7 +332,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — количество различных трасс. Поскольку это число может быть очень большим, выведите его остаток от деления на 998244353.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3 4 1
@@ -344,6 +357,7 @@ X
   <p>Возможные трассы в первом примере:</p>
   <p>Во втором примере размах рук Игоря стал больше, поэтому ему доступны новые трассы, например, такая:</p>
   <p>В третьем примере на нижнем уровне нет зацепок, поэтому правильных трасс не существует.</p>
+  </details>
 </article>
 
 
@@ -373,7 +387,8 @@ X
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — максимально возможную силу Глеба в конце пути.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 9 6
@@ -396,5 +411,6 @@ X
 2
 </pre>
   <p>Один из вариантов движения Глеба в первом примере:</p>
+  </details>
 </article>
 
