--- a/src/components/alg/alg-pract/codeforces/pages/elem-250408-Round1016.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250408-Round1016.html
@@ -43,7 +43,8 @@
 
   <p>Вы можете выводить «Yes» и «No» в любом регистре (например, строки «yES», «yes» и «Yes» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1
@@ -59,6 +60,7 @@ YES
 YES
 NO
 </pre>
+  </details>
 </article>
 
 
@@ -89,7 +91,8 @@ NO
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число в новой строке — количество цифр, которое нужно удалить из числа, чтобы его стоимость стала минимальной.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 666
@@ -103,6 +106,7 @@ NO
 3
 0
 </pre>
+  </details>
 </article>
 
 
@@ -134,7 +138,8 @@ NO
 
   <p>Вы можете выводить «Yes» и «No» в любом регистре (например, строки «yES», «yes» и «Yes» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 52 3
@@ -148,6 +153,7 @@ NO
 YES
 NO
 </pre>
+  </details>
 </article>
 
 
@@ -188,7 +194,8 @@ NO
   <h4>Выходные данные</h4>
   <p>Выведите ответы на каждый из вопросов в отдельной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 2
@@ -224,6 +231,7 @@ NO
 2 1
 1 2
 </pre>
+  </details>
 </article>
 
 
@@ -253,7 +261,8 @@ NO
   <h4>Выходные данные</h4>
   <p>Для каждого запроса выведите одно число  — такое максимальное значение x, что существует разбиение массива a на k подотрезков, при котором минимальный MEX равен x.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1 1
@@ -280,6 +289,7 @@ NO
 1
 0
 </pre>
+  </details>
 </article>
 
 
@@ -333,7 +343,8 @@ NO
 
   <p>Иначе в качестве i-го числа выведите -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3 3
@@ -364,6 +375,7 @@ u s k J
 6
 8
 </pre>
+  </details>
 </article>
 
 
@@ -397,7 +409,8 @@ u s k J
   <h4>Выходные данные</h4>
   <p>Для каждого теста нужно вывести одно целое число — минимальную длину отрезка (l,r), для которого f(al…r) ≥ k. Если такого отрезка не нашлось, нужно вывести -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 5 0
@@ -421,5 +434,6 @@ u s k J
 2
 -1
 </pre>
+  </details>
 </article>
 
