--- a/src/components/alg/alg-pract/codeforces/pages/elem-250424-Round1020.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250424-Round1020.html
@@ -50,7 +50,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — количество 1 на доске.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3
@@ -76,6 +77,7 @@
   <p>Во втором примере единственной строкой, написанной на доске, будет строка 0, поэтому ответ — 0.</p>
 
   <p>В третьем примере на доске будут написаны следующие строки: [10000,01000,00100,00010,00001], так что на доске написано пять 1.</p>
+  </details>
 </article>
 
 
@@ -109,7 +111,8 @@
   <h4>Выходные данные</h4>
   <p>Выведите перестановку p длины n, чтобы количество ячеек в полосе, окрашенных в цвет x, было максимально. Если существует несколько таких перестановок, выведите любую из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 4 2
@@ -132,6 +135,7 @@
   <p>Первый пример объясняется в условии. Можно показать, что 2 — это максимальное количество ячеек, которые могут быть окрашены в цвет 2. Обратите внимание, что другим правильным ответом будет перестановка [0,1,3,2].</p>
 
   <p>Во втором примере перестановка дает раскраску [0,0,0,4], так что 3 ячейки окрашены в цвет 0, можно показать, что это максимум.</p>
+  </details>
 </article>
 
 
@@ -167,7 +171,8 @@
   <h4>Выходные данные</h4>
   <p>Выведите ровно одно целое число, количество способов, которыми Черри Бомб может заполнить отсутствующие элементы из b, так что a и b являются дополняющими.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 3 10
@@ -206,6 +211,7 @@
   <p>Во втором примере нет способа заполнить отсутствующие элементы в b, чтобы a и b были дополняющими.</p>
 
   <p>В четвертом примере некоторые массивы b, которые являются дополняющими к a: [4,2,3,0,1],[7,5,6,3,4], и [9,7,8,5,6].</p>
+  </details>
 </article>
 
 
@@ -239,7 +245,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите минимальное целое число k, которое Игорь должен выбрать при выполнении операции, чтобы гарантировать, что он сможет собрать m цветов. Если он может собрать m цветов без использования операции, выведите 0. Если собрать m цветов невозможно, даже используя операцию, выведите -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 9 5
@@ -280,6 +287,7 @@
   <p>В четвертом примере Игорю не нужно использовать операцию, поэтому ответ равен 0.</p>
 
   <p>В шестом примере, независимо от того, как Игорь выполнит операцию, он не сможет собрать 3 цветка, так чтобы i-й цветок, который он соберет, имел красоту не менее bi, поэтому ответ равен -1.</p>
+  </details>
 </article>
 
 
@@ -320,7 +328,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого запроса выведите минимальное целое число d, которое Корова Нерд должна выбрать, чтобы f(l,r,k) был успешен. Если это невозможно, выведите -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 5 3
@@ -374,6 +383,7 @@
   <p>Общее количество выбранных индексов составило 2, так что окончательная стоимость равна 2, что можно показать, что это минимум. Обратите внимание, что для этого запроса мы не можем выбрать индекс 4, так как p₄=k=2.</p>
 
   <p>В последнем запросе второго примера мы можем выбрать индексы 2,3,4,5 и переупорядочить их так, что p=[3,5,2,7,1,6,4]. Затем f(1,7,3) успешен.</p>
+  </details>
 </article>
 
 
@@ -412,7 +422,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — максимальный возможный размер хорошего множества ячеек из сетки.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 3
@@ -452,6 +463,7 @@
 0011
 </pre>
   <p>И максимальный возможный размер хорошего множества равен 9.</p>
+  </details>
 </article>
 
 
@@ -530,7 +542,8 @@
 
   <p>Сумма n по всем наборам входных данных не должна превышать 10³, и каждый предоставленный граф должен быть допустимым деревом. Для этой версии каждая вершина должна быть смежна с вершиной 1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 1
 4
@@ -563,6 +576,7 @@
   <p>Наконец, мы понимаем, что значения вершин равны [-1,-1,-1,1], поэтому мы отвечаем на это.</p>
 
   <p>Обратите внимание, что это всего лишь объяснение того, как работают запросы, и оно не должно использовать какую-либо конкретную стратегию для решения задачи.</p>
+  </details>
 </article>
 
 
@@ -641,7 +655,8 @@
 
   <p>Сумма n по всем наборам входных данных не должна превышать 10³, и каждый предоставленный граф должен быть допустимым деревом.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 4
@@ -718,5 +733,6 @@
   <p>В последнем примере корнем дерева является 1, а начальные значения равны [-1,1,1,1,1,1,-1].</p>
 
   <p>Обратите внимание, что это всего лишь объяснение того, как работают запросы, и оно не должно использовать какую-либо конкретную стратегию для решения задачи.</p>
+  </details>
 </article>
 
