--- a/src/components/alg/alg-pract/codeforces/pages/elem-250526-Round1027.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250526-Round1027.html
@@ -41,7 +41,8 @@
     <li>число -1 иначе.</li>
   </ul>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 0001
@@ -55,6 +56,7 @@
 -1
 34 36
 20 25
+  </details>
 </article>
 
 
@@ -83,7 +85,8 @@
   <p>Для каждого набора входных данных выведите «YES», если существует способ переставить символы строки так, чтобы хороших пар стало ровно k, иначе выведите «{NO}».</p>
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 6 2
@@ -107,6 +110,7 @@ NO
 YES
 YES
 </pre>
+  </details>
 </article>
 
 
@@ -144,7 +148,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимальное количество массивов, которое можно получить, удалив любое (возможно, нулевое) количество элементов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 6
@@ -171,6 +176,7 @@ YES
   <p>В первом примере можно удалить a₃ и a₅, тогда a=[1,2,4,6], процесс составления массивов для него показан в условии.</p>
   <p>Во втором примере нужно удалить a₂, после этого a=[1,3], а выписаны будут массивы [1] и [3].</p>
   <p>В третьем примере удаления делать не нужно, для a=[1,2,2,4] выписаны будут массивы [1,2,2] и [4].</p>
+  </details>
 </article>
 
 
@@ -197,7 +203,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — минимальную стоимость уничтожения всех n монстров.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 3
@@ -243,6 +250,7 @@ YES
 8
 </pre>
   <p>Ниже приведены примеры оптимальных перемещений, зелёным выделены клетки прямоугольника, который необходимо выбрать.</p>
+  </details>
 </article>
 
 
@@ -277,7 +285,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите n целых чисел — угрозу каждой вершины.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 5
@@ -306,6 +315,7 @@ YES
     <li>a₄ - a₃ + a₂ =6-2+5=9;</li>
     <li>a₅ = 7.</li>
   </ol>
+  </details>
 </article>
 
 
@@ -332,7 +342,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите -1, если получить x=y с помощью данных операций невозможно, и минимальное число необходимых операций, иначе.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 4 6 3
@@ -354,6 +365,7 @@ YES
 6
 -1
 </pre>
+  </details>
 </article>
 
 
@@ -384,7 +396,8 @@ YES
   <p>Для каждого набора входных данных, если подходящей последовательности операций длины k не существует, то выведите «NO». Иначе выведите «YES».</p>
   <p>Вы можете выводить «YES» и «NO» в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 3 3
@@ -414,6 +427,7 @@ NO
 YES
 YES
 </pre>
+  </details>
 </article>
 
 
