--- a/src/components/alg/alg-pract/codeforces/pages/elem-250617-Round1032.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250617-Round1032.html
@@ -48,7 +48,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите наименьшее количество шагов в какой-либо успешной последовательности шагов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 12
 1 1
@@ -94,6 +95,7 @@
   <p>Во втором наборе входных данных можно проделать следующий путь: 2→1. Количество шагов равно 1.</p>
   <p>В третьем наборе входных данных можно проделать следующий путь: 1→2. Количество шагов равно 1.</p>
   <p>В пятом наборе входных данных можно проделать следующий путь: 2→1→2→3. Количество шагов равно 3.</p>
+  </details>
 </article>
 
 
@@ -129,7 +131,8 @@
 
   <p>Вы можете вывести ответ в любом регистре (верхнем или нижнем). Например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительные ответы.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 12
 3
@@ -174,6 +177,7 @@ Yes
   <p>В первом наборе входных данных существуют единственные непустые строки a, b и c такие, что a+b+c=s. Это строки a= «a», b= «a» и c= «a». Конкатенация строк a и c равна a+c=«aa». Строка b является подстрокой этой строки.</p>
   <p>В шестом наборе входных данных можно выбрать a=«a», b=«ab» и c=«b». Конкатенация строк a и c равна a+c=«ab». Строка b является подстрокой этой строки.</p>
   <p>В седьмом наборе входных данных можно выбрать a=«ab», b=«a» и c=«ca». Конкатенация строк a и c равна a+c=«abca». Строка b является подстрокой этой строки.</p>
+  </details>
 </article>
 
 
@@ -208,7 +212,8 @@ Yes
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите минимальное максимальное значение в матрице a после проведения ровно одной операции.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 1 1
@@ -263,6 +268,7 @@ Yes
   <p>В четвёртом наборе входных данных можно выбрать r=1 и c=2.</p>
   <p>В пятом наборе входных данных можно выбрать r=2 и c=3.</p>
   <p>В шестом наборе входных данных можно выбрать r=3 и c=2.</p>
+  </details>
 </article>
 
 
@@ -316,7 +322,8 @@ Yes
 
   <p>Можно показать, что при данных ограничениях ответ всегда существует.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1
@@ -368,6 +375,7 @@ Yes
   <p>Во втором наборе входных данных a1>b1. После применения операции эти значения поменяются местами.</p>
   <p>В третьем наборе входных данных после применения операции a=[1,3] и b=[2,4].</p>
   <p>В четвёртом наборе входных данных после применения операции a=[1,2] и b=[3,4].</p>
+  </details>
 </article>
 
 
@@ -393,7 +401,8 @@ Yes
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите наименьшее значение f(l,x)+f(x,r) среди всех целых значений l ≤ x ≤ r.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 14
 1 1
@@ -435,6 +444,7 @@ Yes
   <p>В шестом наборе входных данных можно выбрать x=200. Тогда f(199,200)+f(200,201)=0+2=2.</p>
   <p>В седьмом наборе входных данных можно выбрать x=900. Тогда f(899,900)+f(900,999)=0+1=1.</p>
   <p>В восьмом наборе входных данных можно выбрать x=1992. Тогда f(1990,1992)+f(1992,2001)=3+0=3.</p>
+  </details>
 </article>
 
 
@@ -466,7 +476,8 @@ Yes
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите количество подотрезков массива с суммой чисел, равной s, и максимальным значением, равным x.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 1 0 0
@@ -514,6 +525,7 @@ Yes
     <li>l=8, r=10.</li>
     <li>l=9, r=13.</li>
   </ul>
+  </details>
 </article>
 
 
@@ -543,7 +555,8 @@ Yes
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите сумму f(slsl+1…sr) для всех пар 1≤l≤r≤n.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1
@@ -570,6 +583,7 @@ Yes
   <p>В первом наборе входных данных у строки s есть одна подстрока, и значение f(0)=1.</p>
   <p>Во втором наборе входных данных все подстроки строки s равны 0, 01, 1. И ответ равен 1+1+1=3 соответственно.</p>
   <p>В третьем наборе входных данных все подстроки строки s равны 0, 01, 011, 0110, 1, 11, 110, 1, 10, 0. И ответ равен 1+1+2+2+1+2+2+1+1+1=14 соответственно.</p>
+  </details>
 </article>
 
 
@@ -600,7 +614,8 @@ Yes
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите n целых чисел: для каждого k от 1 до n выведите максимальную длину наибольшей неубывающей подпоследовательности среди всех подходящих массивов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1
@@ -654,5 +669,6 @@ Yes
   <p>В третьем наборе входных данных для k=4 можно выбрать массив a=[5,3,3,3]. Длина наибольшей неубывающей подпоследовательности у этого массива равна 3.</p>
   <p>В четвертом наборе входных данных для k=8 можно выбрать массив a=[7,5,3,5,3,3,3,3]. Длина наибольшей неубывающей подпоследовательности у этого массива равна 5.</p>
   <p>В пятом наборе входных данных для k=5 можно выбрать массив a=[2,8,5,3,3]. Длина наибольшей неубывающей подпоследовательности у этого массива равна 3.</p>
+  </details>
 </article>
 
