--- a/src/components/alg/alg-pract/codeforces/pages/elem-250701-Round1034.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250701-Round1034.html
@@ -44,7 +44,8 @@
 
   <p>Вы можете выводить ответ в любом регистре (верхнем или нижнем). Например, строки «aLiCe», «alice», «ALICE», и «alICE» будут распознаны как «Alice».</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2
@@ -62,6 +63,7 @@ Bob
 </pre>
   <p>В первом примере, предположим, Алиса выбирает 0, тогда Боб не может выбрать ни одно число, и Алиса выигрывает немедленно.</p>
   <p>Во втором примере, предположим, Алиса выбирает 0, тогда Боб может выбрать 3. Затем предположим, что Алиса выбирает 2, тогда Боб может выбрать 1. В итоге у Алисы не останется чисел, и Боб выигрывает.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -128,7 +130,8 @@ int main() {
 
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5 2 3
@@ -149,6 +152,7 @@ NO
   <code>3	2	4</code>
   <p>Игрок 2 является одним из последних трёх оставшихся игроков.</p>
   <p>В третьем примере можно показать, что нет способа для игрока 1 стать последним оставшимся игроком.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -234,7 +238,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите двоичную строку длины n, i-й символ должен быть 1, если существует последовательность операций, как описано выше, и 0 в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 6
@@ -257,6 +262,7 @@ int main() {
   <code>1</code>
   <p>Таким образом, мы видим, что возможно преобразовать a в [1].</p>
   <p>Можно показать, что невозможно преобразовать a в [3].</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -358,7 +364,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре (верхнем или нижнем). Например, строки «aLiCe», «alice», «ALICE», и «alICE» будут распознаны как «Alice».</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 5 2
@@ -384,6 +391,7 @@ Alice
 </pre>
   <p>В третьем примере Алиса может выбрать подпоследовательность, состоящую из s2, превратив s в 000000. Тогда она выигрывает немедленно.</p>
   <p>В четвертом примере можно показать, что нет способа для Алисы гарантировать, что она сможет превратить s в 0000 за конечное число ходов.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -459,7 +467,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одну строку, содержащую n+1 целых чисел — количество возможных значений MEX(a) после удаления ровно k значений, для k=0,1,…,n.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 5
@@ -485,6 +494,7 @@ int main() {
   <p>Таким образом, мы получаем MEX(a)=3. В качестве альтернативы, если вы удалите 2, то получите следующий массив:</p>
   <code>1	0	0	1</code>
   <p>Таким образом, мы получаем MEX(a)=2. Можно показать, что это единственные возможные значения MEX(a) после удаления ровно одного значения. Таким образом, вывод для k=1 равен 2.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -573,7 +583,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите на одной строке хорошую перестановку длины n с минимальным количеством неподвижных точек.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2
@@ -598,6 +609,7 @@ i   pi   gcd(pi,i)
 6   3    3
 </pre>
   <p>Тогда мы видим, что gcd(pi,i) > 1 для всех 2 ≤ i ≤ 6. Более того, мы видим, что есть только две неподвижные точки, а именно 1 и 5. Можно показать, что невозможно построить хорошую перестановку длины 6 с меньшим количеством неподвижных точек.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -719,7 +731,8 @@ int main() {
 
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 7 6 6
@@ -752,6 +765,7 @@ NO
   <p>После второго запроса массив становится:</p>
   <code>4	5	2	5	4	1	0</code>
   <p>и можно показать, что невозможно отсортировать его с помощью операций вида ai:=(ai+4)(mod6), и также невозможно отсортировать его с помощью операций вида ai:=(ai+3)(mod6).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
