--- a/src/components/alg/alg-pract/codeforces/pages/elem-250705-Round1035.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250705-Round1035.html
@@ -40,7 +40,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите целое число — минимальную стоимость, чтобы сделать a = b, или -1, если это невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1 4 1 2
@@ -60,6 +61,7 @@
 -1
 990000000
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -138,3 +140,59 @@ int main() {
 </pre>
   </details>
 </article>
+
+
+<!-- Задача B. Отрезки -->
+<article class="article">
+  <div class="anchor" id="task2"></div>
+  <h3>Задача B. Отрезки</h3>
+
+  <div><i>Ограничение по времени 1.5с
+  <br>Ограничение по памяти 256мб</i></div>
+
+</article>
+
+
+<!-- Задача C. Хорошая задача -->
+<article class="article">
+  <div class="anchor" id="task3"></div>
+  <h3>Задача C. Хорошая задача</h3>
+
+  <div><i>Ограничение по времени 2с
+  <br>Ограничение по памяти 256мб</i></div>
+
+</article>
+
+
+<!-- Задача D. Удаление токенов -->
+<article class="article">
+  <div class="anchor" id="task4"></div>
+  <h3>Задача D. Удаление токенов</h3>
+
+  <div><i>Ограничение по времени 2с
+  <br>Ограничение по памяти 256мб</i></div>
+
+</article>
+
+
+<!-- Задача E. Ограничение на И -->
+<article class="article">
+  <div class="anchor" id="task5"></div>
+  <h3>Задача E. Ограничение на И</h3>
+
+  <div><i>Ограничение по времени 2с
+  <br>Ограничение по памяти 256мб</i></div>
+
+</article>
+
+
+<!-- Задача F. Вулканические извержения -->
+<article class="article">
+  <div class="anchor" id="task6"></div>
+  <h3>Задача F. Вулканические извержения</h3>
+
+  <div><i>Ограничение по времени 3с
+  <br>Ограничение по памяти 256мб</i></div>
+
+</article>
+
