--- a/src/components/alg/alg-pract/codeforces/pages/elem-250717-Round1037.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250717-Round1037.html
@@ -14,7 +14,7 @@
   <br><a href="#task5">Задача E. Н-О-Д, не повезло!</a>
   <br><a href="#task6">Задача F. 1-1-1, бесплатное дерево!</a>
   <br><a href="#task7">Задача G1. Большие выигрыши! (простая версия)</a>
-  <br><a href="#task8">G2. Большие выигрыши! (сложная версия)</a>
+  <br><a href="#task8">Задача G2. Большие выигрыши! (сложная версия)</a>
 </article>
 
 
@@ -691,7 +691,7 @@ NO
 
 <!-- Задача G2. Большие выигрыши! (сложная версия) -->
 <article class="article">
-  <div class="anchor" id="task7"></div>
+  <div class="anchor" id="task8"></div>
   <h3>Задача G2. Большие выигрыши! (сложная версия)</h3>
 
   <div><i>Ограничение по времени 4с
