--- a/src/components/code/code-c/c-base/pages/elem-c.html
+++ b/src/components/code/code-c/c-base/pages/elem-c.html
@@ -106,6 +106,7 @@
   <p>Когда компилятор смотрит исходный код, то первым делом он выполняет директивы препроцессора.</p>
   <p>Каждая директива размещается на одной строке и начинается символом #.</p>
   <p>Концом директивы является перевод на новую строку. Точка с запятой (;) не ставится.</p>
+  <p>Если в конце строки последним симолом будет прямой слеш /, то директиву можно продолжить на следующей строке.</p>
 </article>
 
 
@@ -114,7 +115,7 @@
   <div class="anchor" id="dir1"></div>
   <h3>#include</h3>
 
-  <p>Директива #include определяет какие файлы надо включить в данном месте в текст программы. Компилятор заменяет директиву #include на текст программы из этого файла</p>
+  <p>Директива <strong>#include</strong> определяет какие файлы надо включить в данном месте в текст программы. Компилятор заменяет директиву #include на текст программы из этого файла</p>
   <code>#include ИМЯ_ФАЙЛА</code>
   <p>Подключим файл заголовков стандартной библиотеки ввода-вывода</p>
   <code>#include &lt;stdio.h&gt;</code>
@@ -126,7 +127,7 @@
   <div class="anchor" id="dir2"></div>
   <h3>#define</h3>
 
-  <p>Директива препроцессора #define может быть использована для определения констант</p>
+  <p>Директива <strong>#define</strong> определяет константы и макросы</p>
   <code>#define ИМЯ_КОНСТАНТЫ ЗНАЧЕНИЕ</code>
   <p>Директива #define должна быть в самом начале файла с кодом программы. Все определенные таким образом константы будут заменены в коде программы препроцессором еще до ее компиляции.</p>
   <p>Определим целочисленную константу</p>
@@ -143,7 +144,7 @@
   <div class="anchor" id="dir3"></div>
   <h3>#undef</h3>
 
-  <p>Константа, определенная директивой #define, может быть разопределена директивой #undef</p>
+  <p>Директива <strong>#undef</strong> уничтожает константы и макросы, определенные директивой <strong>#define</strong>.</p>
   <code>#undef STO</code>
   <code>#undef PI</code>
   <code>#undef VERSION</code>
@@ -155,9 +156,10 @@
   <div class="anchor" id="dir4"></div>
   <h3>#ifdef #endif</h3>
 
-  <p>Условная директива препроцессора #ifdef может быть использована для проверки того, существует ли определение конкретной константы. Директива #ifdef также называется макросом. После этого можно использовать директиву #define для определения константы.</p>
-  <p>Директива #ifdef всегда должна заканчиваться директивой #endif</p>
-  <p>Макрос может определить операционную систему компьютера. В windows определена константа _WIN32, а в LINUX - linux.</p>
+  <p>Директива <strong>#ifdef</strong> используется для условной компиляции. Проверяется условие, если константа, написанная после директивы #ifdef определена директивой #define, то все что ниже и до директивы #endif будет компилироваться.</p>
+  <p>После директивы #ifdef используют директиву #define для определения константы.</p>
+  <p>Директива <strong>#ifdef</strong> всегда должна заканчиваться директивой <strong>#endif</strong></p>
+  <p>Директива #ifdef может определить операционную систему компьютера. В windows определена константа _WIN32, а в LINUX - linux.</p>
 <pre>
 #ifdef _WIN32
 #define SYSTEM "Windows"
@@ -171,8 +173,9 @@
   <div class="anchor" id="dir5"></div>
   <h3>#ifndef #endif</h3>
 
-  <p>Если константа не определена, то это можно проверить с помощью директивы #ifndef</p>
-  <p>Директива #ifndef всегда должна заканчиваться директивой #endif</p>
+  <p>Директива <strong>#ifndef</strong> используется для условной компиляции. Проверяется условие, если константа не определена, то все что ниже и до директивы #endif будет компилироваться.</p>
+  <p>После директивы #ifndef используют директиву #define для определения константы.</p>
+  <p>Директива <strong>#ifndef</strong> всегда должна заканчиваться директивой <strong>#endif</strong></p>
 </article>
 
 
@@ -181,7 +184,7 @@
   <div class="anchor" id="dir6"></div>
   <h3>#if #elif #else #endif</h3>
 
-  <p>Директива #if всегда должна заканчиваться директивой #endif</p>
+  <p>Директива <strong>#if</strong> используется для условной компиляции и всегда должна заканчиваться директивой <strong>#endif</strong></p>
 </article>
 
 
