--- a/src/components/code/code-c/c-base/pages/elem-cpractice.html
+++ b/src/components/code/code-c/c-base/pages/elem-cpractice.html
@@ -142,21 +142,60 @@ gcc standart 14.1.0</pre>
   <div class="anchor" id="p4"></div>
   <h3>4. Локализация кириллицы в консоли</h3>
 
-  <h4>Локализация русских букв для файлов сохраненных с кодировкой ANSI или Windows-1251, но не UTF-8</h4>
-  <p>По умолчанию язык Си работает только с таблицей ASCII, содержащей английские буквы. Для того чтобы язык Си мог работать другими алфавитами, в том числе с русскими буквами, нужно вызвать функцию setlocale() из заголовочного файла locale.h</p>
+  <p>По умолчанию язык Си работает только с таблицей <strong>ASCII</strong>, содержащей английские буквы. Для того чтобы язык Си мог работать с другими алфавитами, в том числе с русскими буквами, нужно локализовать другой алфавит. Локализация русских букв отличается для текстового файла с программой сохраненного в кодировке <strong>Windows-1251</strong> и в кодировке <strong>UTF-8</strong></p>
 
-<pre>#include &lt;stdio.h&gt;
+  <h4>Локализация Windows-1251</h4>
+  <p>Чтобы работать в кодировке <strong>Windows-1251</strong>, нужно сохранить текст с программой в кодировке <strong>Windows-1251</strong>.</p>
+  <p>Для начала попробуем вывести русский текс в консоль и ввести русский текст из консоли.</p>
+
+<pre>
+#include <stdio.h>
+
+int main() {
+  puts("Введите строку");
+  char str[256] = "";
+  scanf("%255s", str);
+  printf("%s", str);
+
+  return 0;
+}
+</pre>
+
+  <p>Если выводятся и вводятся русские буквы, то кодировка программы и кодировка консоли настроены на кодировку <strong>Windows-1251</strong>. Если русских букв нет, то надо настроить кодировку.</p>
+
+  <p>Для кодировки программы убедиться что она сохранена в кодировке <strong>Windows-1251</strong>. Подключим заголовочный файл <strong>locale.h</strong>. Вызвовем функцию <strong>setlocale()</strong> из заголовочного файла locale.h. Теперь мы можем <strong>выводить в консоль из программы</strong> русские буквы в кодировке <strong>Windows-1251</strong>.</p>
+
+<pre>
+#include &lt;stdio.h&gt;
 #include &lt;locale.h&gt;
 
 int main() {
-  setlocale(LC_ALL, "");
+  setlocale(LC_ALL, "Russian_Russia.1251");
   printf("Привет, мир!\n");
   return 0;
-}</pre>
+}
+</pre>
   <code>Привет, мир!</code>
 
+  <p>По умолчанию в консоли используется кодировка <strong>Windows-966</strong>. Сменить кодировку консоли можно, подключив заголовочный файл <strong>stdlib.h</strong> и вызвав функцию system("chcp 1251"). Теперь мы можем <strong>вводить из консоли в программу</strong> русские буквы в кодировке <strong>Windows-1251</strong>.</p>
+
+<pre>
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+
+int main() {
+  system("chcp 1251"); // смена кодировки консоли
+  puts("Введите строку (не более 255 символов)");
+  char str[256] = "";
+  scanf("%255s", str);
+  printf("%s", str);
+  return 0;
+}
+</pre>
+
   <h4>Локализация unicode</h4>
-  <p>Для файлов сохраненных в формате unicode (UTF-8, UTF-16, UTF-32) надо использовать функцию wprintf() и перед первым параметром ставить букву L. Это происходит потому, что для кодировки ANSI необходим 1 байт, а для кодировки unicode нужно от 1 до 6 байтов.</p>
+  <p>Чтобы работать в кодировке <strong>unicode (UTF-8, UTF-16, UTF-32)</strong>, нужно сохранить текст с программой в кодировке UTF-8. Подключим заголовочный файл <strong>locale.h</strong>. Вызвовем функцию <strong>setlocale()</strong> из заголовочного файла locale.h</p>
+  <p>Вместо printf() надо использовать функцию wprintf() и перед первым параметром ставить букву L. Это происходит потому, что для кодировки ANSI необходим 1 байт, а для кодировки unicode нужно от 1 до 6 байтов.</p>
 
 <pre>#include &lt;stdio.h&gt;
 #include &lt;locale.h&gt;
