--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,6 +2,14 @@
 
 <ol reversed>
 
+  <li>2025.07.29 вт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 73-78стр
+  </li>
+
+  <li>2025.07.28 пн
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 62-73стр
+  </li>
+
   <li>2025.07.25 пт
     <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 44-62стр
   </li>
