--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250511-Nvsb2018.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250511-Nvsb2018.html
@@ -48,6 +48,8 @@
   <h4>Выходные данные</h4>
   <p>В единственной строке одно целое число - минимальное количество арестов, которое необходимо произвести, чтобы узнать счета, сумма доходов на которых не менее S. Если сумму S набрать невозможно, то вывести "IMPOSSIBLE"</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 5 4
@@ -63,6 +65,7 @@
 1 1 1 1 1
 </pre>
   <code>IMPOSSIBLE</code>
+  </details>
 </article>
 
 
@@ -84,7 +87,8 @@
   <h4>Выходные данные</h4>
   <p>В первой и единственной строке одно натуральное число - максимальное количество нор, которое может оказаться в области контроля датчика, установленного вместе с камерой в центре поляны. Дальностью действия датчика можно пренебречь.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 3 1
@@ -97,6 +101,7 @@
 1 -5
 </pre>
   <code>5</code>
+  </details>
 </article>
 
 
@@ -117,7 +122,8 @@
   <h4>Выходные данные</h4>
   <p>В первой и единственной строке два целых числа через символ '/' - числитель и знаменатель несократимой дроби, представляющей собой максимальное значение соотношения суммарной стоимости K камней из имеющегося множества к их суммарному весу. Если ответ - целое число, то в качестве знаменателя вывести 1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3 2
 5 1
@@ -125,6 +131,7 @@
 2 3
 </pre>
   <code>8/3</code>
+  </details>
 </article>
 
 
@@ -145,12 +152,14 @@
   <h4>Выходные данные</h4>
   <p>В первой и единственной строке одно целое число - количество различных весов в диапазоне от 1 до N включительно, которые можно набрать имеющимися гирями.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2 10
 3 5
 </pre>
   <code>6</code>
+  </details>
 </article>
 
 
@@ -172,6 +181,8 @@
   <h4>Выходные данные</h4>
   <p>В единственной строке необходимо выдать математическое ожидание количества набранных очков для таракана со скоростью K в виде несократимой дроби, для ыелых чисел знаменатель равен 1.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
   <code>2 2</code>
   <code>1/3</code>
@@ -179,6 +190,7 @@
   <h4>Пример 2</h4>
   <code>3 3</code>
   <code>3/7</code>
+  </details>
 </article>
 
 
@@ -199,7 +211,8 @@
   <h4>Выходные данные</h4>
   <p>В первой строке вывести YES, если первая команда может занять единоличное первое место в группе по итогам всех матчей, и NO в противном случае. Вторая, третья и четвертая строки формируются аналогично для второй, третьей и четвертой команд соответственно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1 2 10 0
@@ -212,6 +225,7 @@ NO
 YES
 YES
 </pre>
+  </details>
 </article>
 
 
@@ -231,6 +245,8 @@ YES
   <h4>Выходные данные</h4>
   <p>В первой и единственной строке последовательность из N строчных латинских букв - первое в алфавитном порядке красивое имя, которое может иметь индеец данного племени. Если такого имени нет, вывести IMPOSSIBLE.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 6
@@ -244,6 +260,7 @@ cbacba
 aaaa
 </pre>
   <code>IMPOSSIBLE</code>
+  </details>
 </article>
 
 
@@ -263,12 +280,14 @@ aaaa
   <h4>Выходные данные</h4>
   <p>В первой и единственной строке одно натуральное число - максимально возможная сумма премии, которую можно получить, вычеркнув K цифр из указанного в приказе числа.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9052
 2
 </pre>
   <code>95</code>
+  </details>
 </article>
 
 
@@ -288,9 +307,11 @@ aaaa
   <h4>Выходные данные</h4>
   <p>В единственной строке одно целое число - сумма потраченных денег для получения приза.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
   <code>7 5 10</code>
   <code>20</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -340,9 +361,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке минимальная по длине десятичная запись заданного числа.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
   <code>0123,0010</code>
   <code>123,001</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -445,13 +468,15 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Минимально возможное число различных цветов забора после перекраски части досок.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 abcde
 edcba
 </pre>
   <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
