--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250608-Blitz2025s2.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250608-Blitz2025s2.html
@@ -65,7 +65,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите максимальное возможное значение единственного последнего элемента на отдельной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1
@@ -90,6 +91,7 @@
     <li>Удалите a1=998 и a2=596, и добавьте 1593 в конец a. Теперь a равен [1593].</li>
   </ol>
   <p>Можно показать, что единственный последний элемент не может быть больше 1593. Поэтому ответ равен 1593.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -162,7 +164,8 @@ int main() {
   </ul>
   <p>Если существует несколько целых чисел, удовлетворяющих условиям, вы можете вывести любое.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 5
@@ -184,6 +187,7 @@ int main() {
 </pre>
   <p>В первом примере существует невырожденный треугольник со сторонами длины 3, 5 и 3⊕5=6. Поэтому y=3 является допустимым ответом.</p>
   <p>Во втором примере 1 является единственным возможным кандидатом для y, но он не может образовать невырожденный треугольник. Поэтому ответ -1.</p>
+  </details>
 </article>
 
 
@@ -225,7 +229,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите строку s из которой был получен результат кодирования b.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 10
@@ -246,6 +251,7 @@ algorithm
 w
 meetinthemiddle
 </pre>
+  </details>
 </article>
 
 
@@ -281,7 +287,8 @@ meetinthemiddle
 
   <p>Обратите внимание, что ответ может не умещаться в 32-битные типы данных.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8
 5
@@ -328,6 +335,7 @@ meetinthemiddle
     <li>[3,4,2];</li>
   </ol>
   <p>Красивыми парами являются тройка 1 с тройкой 4, тройка 2 с тройкой 5, тройка 3 с тройкой 6.</p>
+  </details>
 </article>
 
 
@@ -363,7 +371,8 @@ meetinthemiddle
 
   <p>В противном случае выведите NO.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 6
@@ -401,6 +410,7 @@ RRHH
 </pre>
   <p>Рассмотрим первый пример: строка S=NENSNE. Одно из возможных решений, показанное на рисунке ниже p=RRHRRH, с использованием которого и ровер, и вертолет окажутся на один метр на север и на один метр на восток.</p>
   <p>Для WWW решение невозможно.</p>
+  </details>
 </article>
 
 
@@ -434,7 +444,8 @@ RRHH
 
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную). Например, строки «yEs», «yes», «Yes» и «YES» будут приняты как положительный ответ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1 3 1 5
@@ -472,6 +483,7 @@ YES
     <li>отправить сообщение в момент времени 5.</li>
   </ul>
   <p>Последний (шестой) набор примера может упасть, если в вашем решении есть переполнение целочисленного типа.</p>
+  </details>
 </article>
 
 
