--- a/src/components/alg/alg-pract/codeforces/pages/elem-250119-Round998.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250119-Round998.html
@@ -35,7 +35,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите максимальную Фибоначчиевость на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1 1 3 5
@@ -56,6 +57,7 @@
   <p>В первом наборе входных данных мы можем установить a3 равным 2, чтобы достичь максимальной Фибоначчиевости равной 3.</p>
 
   <p>В третьем наборе входных данных можно показать, что 2 — это максимальная Фибоначчиевость, которую можно достичь. Это можно сделать, установив a3 равным 18.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -161,7 +163,8 @@ int main() {
     <li>В противном случае выведите -1.</li>
   </ul>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2 3
@@ -189,6 +192,7 @@ int main() {
   <p>Во втором примере только одна корова, поэтому если корова сыграет все свои карты в порядке возрастания, колода будет опустошена.</p>
 
   <p>В третьем примере можно показать, что не существует допустимого порядка ходов, который позволяет сыграть все карты.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -295,7 +299,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите score, если оба игрока играют оптимально.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4 4
@@ -323,6 +328,7 @@ int main() {
   <p>В третьем наборе входных данных невозможно, чтобы сумма выбранных Алиской и Бобом целых чисел была равна 1, поэтому мы отвечаем 0.</p>
 
   <p>Обратите внимание, что это всего лишь пример того, как может проходить игра для демонстрационных целей. Это может не быть самыми оптимальными стратегиями Алисы или Боба.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -413,7 +419,8 @@ int main() {
 
   <p>Вы можете вывести ответ в любом регистре. Например, строки «yEs», «yes», и «Yes» также будут распознаны как положительные ответы.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 5
@@ -439,6 +446,7 @@ NO
   <p>Во втором наборе входных данных можно показать, что это невозможно.</p>
 
   <p>В третьем наборе входных данных, после выполнения операции на i=1, массив становится [0,1,2,3], который теперь находится в неубывающем порядке.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -526,7 +534,8 @@ int main()
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число, обозначающее минимальное количество операций, необходимых на новой строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3 2 1
@@ -562,6 +571,7 @@ int main()
   <p>Можно показать, что меньшее количество операций невозможно достичь.</p>
   <p>Во втором наборе входных данных графы F и G уже изначально удовлетворяют условию.</p>
   <p>В пятом наборе входных данных рёбра от 1 до 3 и от 2 до 3 должны быть оба удалены.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -710,7 +720,8 @@ int main()
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите k целых чисел, разделенных пробелом, на новой строке: количество массивов для x=1, 2, ..., k, по модулю 998244353.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2 2
@@ -735,6 +746,7 @@ int main()
     <li>[1,2]</li>
     <li>[2,1]</li>
   </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -891,7 +903,8 @@ int main()
 
   <p>Вы можете вывести ответ в любом регистре. Например, строки «yEs», «yes», и «Yes» также будут признаны положительными ответами.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3
@@ -920,5 +933,6 @@ YES
   <p>В первом наборе входных данных можно показать, что это невозможно.</p>
 
   <p>Во втором наборе входных данных Боб может выполнить одну операцию с индексами i=1 и j=2. Массивы становятся [3,4,5] и [1,2,6] соответственно. Оба массива теперь отсортированы.</p>
+  </details>
 </article>
 
