--- a/src/components/alg/alg-pract/codeforces/pages/elem-250413-Round1017.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-250413-Round1017.html
@@ -37,7 +37,8 @@
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите строку, сформированную путем объединения первой буквы каждого слова.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 united states america
@@ -57,6 +58,7 @@ biy
 sss
 gba
 </pre>
+  </details>
 </article>
 
 
@@ -80,7 +82,8 @@ gba
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите два целых числа l′ и r′ на новой строке. Если существует несколько решений, выведите любое.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4 2 -2 2
@@ -94,6 +97,7 @@ gba
 -1 2
 -5 3
 </pre>
+  </details>
 </article>
 
 
@@ -123,7 +127,8 @@ gba
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите 2n чисел в новой строке: p<sub>1</sub>, p<sub>2</sub>, ... , p<sub>2n</sub>.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3
@@ -141,6 +146,7 @@ gba
 2 1
 1 2 3 4
 </pre>
+  </details>
 </article>
 
 
@@ -172,7 +178,8 @@ gba
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите «YES», если s может быть услышанным звуком, и «NO» в противном случае. Вы можете выводить в любом регистре.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 R
@@ -193,6 +200,7 @@ NO
 NO
 YES
 </pre>
+  </details>
 </article>
 
 
@@ -220,7 +228,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите максимальное значение в отдельной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3
@@ -243,6 +252,7 @@ YES
 </pre>
   <p>В первом наборе входных данных лучшее, что мы можем сделать, это (18⊕18)+(18⊕18)+(18⊕18)=0.</p>
   <p>Во втором наборе входных данных мы выбираем k = 5, чтобы получить (16⊕1)+(16⊕2)+(16⊕4)+(16⊕8)+(16⊕16)=79.</p>
+  </details>
 </article>
 
 
@@ -275,7 +285,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите n строк, каждая из которых содержит m чисел, которые удовлетворяют критериям. Если существует несколько решений, выведите любое.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2 2 2
@@ -294,6 +305,7 @@ YES
 9 10 5 13 21
 22 7 15 18 16
 </pre>
+  </details>
 </article>
 
 
@@ -338,7 +350,8 @@ YES
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q строк, выводя риззинесс вашего массива после каждой операции.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 1
 13
@@ -380,5 +393,6 @@ YES
     <li>[3,1,2,4]</li>
     <li>[4,2,1,3]</li>
   </ul>
+  </details>
 </article>
 
